// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Syncing with failed bip44 1`] = `
Object {
  "addressLookupMap": Map {
    5 => "Ae2tdPwUPEZ6tzHKyuMLL6bh1au5DETgb53PTmJAN9aaCLtaUTWHvrS2mxo",
    46 => "Ae2tdPwUPEZ5PxKxoyZDgjsKgMWMpTRa4PH3sVgARSGBsWwNBH3qg7cMFsP",
    47 => "Ae2tdPwUPEZE9RAm3d3zuuh22YjqDxhR1JF6G93uJsRrk51QGHzRUzLvDjL",
    48 => "Ae2tdPwUPEZE9RAm3d3zuuh22YjqDxhR1JF6G93uJsRrk51QGHzRUzLvDjL",
  },
  "txs": Array [
    Object {
      "accountingInputs": Array [],
      "accountingOutputs": Array [],
      "amount": "-1900000",
      "block": null,
      "fee": "-200000",
      "transaction": Object {
        "BlockId": null,
        "Digest": 1.9060984568373646e-36,
        "ErrorMessage": null,
        "Hash": "29f2fe214ec2c9b05773a689eca797e903adeaaf51dfe20782a4bf401e7ed547",
        "LastUpdateTime": 1568392676000,
        "Ordinal": null,
        "Status": -1,
        "TransactionId": 3,
      },
      "type": "expend",
      "utxoInputs": Array [
        Object {
          "AddressId": 5,
          "Amount": "2100000",
          "IndexInOwnTx": 0,
          "IndexInParentTx": 0,
          "ParentTxHash": "29f2fe214ec2c9b05773a689eca797e903adeaaf51dfe20782a4bf401e7ed546",
          "TransactionId": 3,
          "UtxoTransactionInputId": 3,
        },
      ],
      "utxoOutputs": Array [
        Object {
          "AddressId": 48,
          "Amount": "1900000",
          "IsUnspent": true,
          "OutputIndex": 0,
          "TransactionId": 3,
          "UtxoTransactionOutputId": 5,
        },
      ],
    },
    Object {
      "accountingInputs": Array [],
      "accountingOutputs": Array [],
      "amount": "2100000",
      "block": Object {
        "BlockId": 2,
        "BlockTime": 2019-09-13T16:37:36.000Z,
        "Digest": -9.690691258114666e-56,
        "Hash": "a9835cc1e0f9b6c239aec4c446a6e181b7db6a80ad53cc0b04f70c6b85e9ba26",
        "Height": 218609,
        "SlotNum": 219651,
      },
      "fee": "0",
      "transaction": Object {
        "BlockId": 2,
        "Digest": 8.191593645542673e-27,
        "ErrorMessage": null,
        "Hash": "29f2fe214ec2c9b05773a689eca797e903adeaaf51dfe20782a4bf401e7ed545",
        "LastUpdateTime": 1568392656000,
        "Ordinal": 0,
        "Status": -2,
        "TransactionId": 1,
      },
      "type": "income",
      "utxoInputs": Array [
        Object {
          "AddressId": 46,
          "Amount": "4000000",
          "IndexInOwnTx": 0,
          "IndexInParentTx": 0,
          "ParentTxHash": "9c8d3c4fe576f8c99d8ad6ba5d889f5a9f2d7fe07dc17b3f425f5d17696f3d20",
          "TransactionId": 1,
          "UtxoTransactionInputId": 1,
        },
      ],
      "utxoOutputs": Array [
        Object {
          "AddressId": 5,
          "Amount": "2100000",
          "IsUnspent": true,
          "OutputIndex": 0,
          "TransactionId": 1,
          "UtxoTransactionOutputId": 1,
        },
        Object {
          "AddressId": 47,
          "Amount": "1731391",
          "IsUnspent": true,
          "OutputIndex": 1,
          "TransactionId": 1,
          "UtxoTransactionOutputId": 2,
        },
      ],
    },
    Object {
      "accountingInputs": Array [],
      "accountingOutputs": Array [],
      "amount": "2100000",
      "block": Object {
        "BlockId": 1,
        "BlockTime": 2019-09-13T16:37:16.000Z,
        "Digest": -6.352946211521613e-51,
        "Hash": "a9835cc1e0f9b6c239aec4c446a6e181b7db6a80ad53cc0b04f70c6b85e9ba25",
        "Height": 218608,
        "SlotNum": 219650,
      },
      "fee": "0",
      "transaction": Object {
        "BlockId": 1,
        "Digest": 1.249559827714551e-31,
        "ErrorMessage": null,
        "Hash": "29f2fe214ec2c9b05773a689eca797e903adeaaf51dfe20782a4bf401e7ed546",
        "LastUpdateTime": 1568392636000,
        "Ordinal": 0,
        "Status": -2,
        "TransactionId": 2,
      },
      "type": "income",
      "utxoInputs": Array [
        Object {
          "AddressId": 46,
          "Amount": "4000000",
          "IndexInOwnTx": 0,
          "IndexInParentTx": 0,
          "ParentTxHash": "9c8d3c4fe576f8c99d8ad6ba5d889f5a9f2d7fe07dc17b3f425f5d17696f3d21",
          "TransactionId": 2,
          "UtxoTransactionInputId": 2,
        },
      ],
      "utxoOutputs": Array [
        Object {
          "AddressId": 5,
          "Amount": "2100000",
          "IsUnspent": true,
          "OutputIndex": 0,
          "TransactionId": 2,
          "UtxoTransactionOutputId": 3,
        },
        Object {
          "AddressId": 47,
          "Amount": "1731391",
          "IsUnspent": true,
          "OutputIndex": 1,
          "TransactionId": 2,
          "UtxoTransactionOutputId": 4,
        },
      ],
    },
  ],
}
`;

exports[`Syncing with failed bip44 2`] = `
Array [
  Object {
    "Address": Array [
      Object {
        "AddressId": 1,
        "Digest": -5.18814298093809e+161,
        "Hash": "Ae2tdPwUPEZCfyggUgSxD1E5UCx5f5hrXCdvQjJszxE7epyZ4ox9vRNUbHf",
        "Type": 0,
      },
      Object {
        "AddressId": 2,
        "Digest": 4.005897187270229e+39,
        "Hash": "Ae2tdPwUPEZFXnw5T5aXoaP28yw4mRLeYomaG9mPGCFbPUtw368ZWYKp1zM",
        "Type": 0,
      },
      Object {
        "AddressId": 3,
        "Digest": -1.9091532612969177e-131,
        "Hash": "Ae2tdPwUPEZ8gpDazyi8VtcGMnMrkpKxts6ppCT45mdT6WMZEwHXs7pP8Tg",
        "Type": 0,
      },
      Object {
        "AddressId": 4,
        "Digest": -2.400376372464157e+124,
        "Hash": "Ae2tdPwUPEZBFhEBZgvm3fQeuW2zBPochfQehFtXn6tCRQy7zsQ9Px88jsH",
        "Type": 0,
      },
      Object {
        "AddressId": 5,
        "Digest": 9.948420953505185e-47,
        "Hash": "Ae2tdPwUPEZ6tzHKyuMLL6bh1au5DETgb53PTmJAN9aaCLtaUTWHvrS2mxo",
        "Type": 0,
      },
      Object {
        "AddressId": 6,
        "Digest": 9.326602089821879e-30,
        "Hash": "Ae2tdPwUPEYxzZH7sSyyXK6DDmjCxRajXUXFqbEjtxfPN7HZzQfXr4hxKwT",
        "Type": 0,
      },
      Object {
        "AddressId": 7,
        "Digest": 4.871145213048404e-43,
        "Hash": "Ae2tdPwUPEZMUQdcxu6AEoq9wzL8mtSCKhWUNhYjXqq1aenwimnLaCit1FY",
        "Type": 0,
      },
      Object {
        "AddressId": 8,
        "Digest": 6.75274668731026e+61,
        "Hash": "Ae2tdPwUPEYw9VvB1BQqgGd8XzNfgz4mv9gBjB9P8EtvPQfz4D8Gt4xnQog",
        "Type": 0,
      },
      Object {
        "AddressId": 9,
        "Digest": -7.631163428764417e+276,
        "Hash": "Ae2tdPwUPEYxYn4T89ffVqpDwqwsMDAZTcfnWBqAkjoem5sgaVKGU3FUB2E",
        "Type": 0,
      },
      Object {
        "AddressId": 10,
        "Digest": -1.6017303425870374e-101,
        "Hash": "Ae2tdPwUPEZBZ9aYboQuf5PFcjuZRCosBhLkUCxSQw1vqk3iyK5qGo5CJWe",
        "Type": 0,
      },
      Object {
        "AddressId": 11,
        "Digest": -6.537349771934158e+223,
        "Hash": "Ae2tdPwUPEZ4yCaYs3j7pPPaM9iA3KLruJkKjmUBBLKYzpJUHutWdS6EkKa",
        "Type": 0,
      },
      Object {
        "AddressId": 12,
        "Digest": -5.3866774008751e-237,
        "Hash": "Ae2tdPwUPEZ5zV8wqC9gPvkDtr2MS3Ys2vQbyPdM4wsdnzevbqnaJFg62hk",
        "Type": 0,
      },
      Object {
        "AddressId": 13,
        "Digest": 1.382203475035168e-237,
        "Hash": "Ae2tdPwUPEZAD1KmgTQ4zS6Q5s4VXWDXqB3ZmM1abQGoyrGN8qCsZyXc3vf",
        "Type": 0,
      },
      Object {
        "AddressId": 14,
        "Digest": 2.490260903712286e+254,
        "Hash": "Ae2tdPwUPEZ1SFwQMGroCTabfCPJ1RiK8D2F11C1vTMi14tX1XK2uogRWqM",
        "Type": 0,
      },
      Object {
        "AddressId": 15,
        "Digest": 1.1423435570016581e+77,
        "Hash": "Ae2tdPwUPEZJ8CiSFVipoupUVBGRAVbmbpmKPCXsExcwzZd6FcNpAcExY1r",
        "Type": 0,
      },
      Object {
        "AddressId": 16,
        "Digest": 1.1025868598519032e-268,
        "Hash": "Ae2tdPwUPEZCeLRPNcreMQAAfJFs9ZzBeFK9pUXhMnL3ooQP9TajasVsYKK",
        "Type": 0,
      },
      Object {
        "AddressId": 17,
        "Digest": 6.802372910540179e+76,
        "Hash": "Ae2tdPwUPEZGvzYwTSUZhTxDviZSKqLZDYVkcT4rLqckFXvdTMv21CinTCd",
        "Type": 0,
      },
      Object {
        "AddressId": 18,
        "Digest": 1.0898173340677806e+293,
        "Hash": "Ae2tdPwUPEZKEsQJxXQvRJHLCWRGFQNWFgHhroEw9GGXV25wRBH8TAmwCRi",
        "Type": 0,
      },
      Object {
        "AddressId": 19,
        "Digest": -1.4835020475302562e+52,
        "Hash": "Ae2tdPwUPEZ6u2i2u4iLhd9Rq4rUBsVaMpqQWuTCXMitMmugcsr9iANjNEE",
        "Type": 0,
      },
      Object {
        "AddressId": 20,
        "Digest": 1.0753995066668421e+154,
        "Hash": "Ae2tdPwUPEYxsngJhnW49jrmGuaCvQK34Hqrnx5w5SWxgfjDkSDcnrRdT5G",
        "Type": 0,
      },
      Object {
        "AddressId": 21,
        "Digest": 1.5842207841682243e-196,
        "Hash": "Ae2tdPwUPEZ3Kt2BJnDMQggxEA4c9MTagByH41rJkv2k82dBch2nqMAdyHJ",
        "Type": 0,
      },
      Object {
        "AddressId": 22,
        "Digest": 1.8819557589593857e+126,
        "Hash": "Ae2tdPwUPEYzRJEAdyX24mYTmKx8dMHYQgxkBcgnsdFHPPvmySMS9cspZmj",
        "Type": 0,
      },
      Object {
        "AddressId": 23,
        "Digest": -1.6768419216602427e+93,
        "Hash": "Ae2tdPwUPEZ5yxTy5wcVmUXP5xkkDSXfrgqWp8Px6knmUiFjJEytBGXfWoS",
        "Type": 0,
      },
      Object {
        "AddressId": 24,
        "Digest": -2.5950200694100975e-154,
        "Hash": "Ae2tdPwUPEZ3pKEVL1tMmz8EzaE9Hyn2cVJKf3TFVCjw7xeLFBdJngUXPXG",
        "Type": 0,
      },
      Object {
        "AddressId": 25,
        "Digest": -6.28195010657389e+125,
        "Hash": "Ae2tdPwUPEZLhFMGWjMpCWwsUiN58DkKmtg6r7dFJfXhmUyzNGPb2Crg141",
        "Type": 0,
      },
      Object {
        "AddressId": 26,
        "Digest": 1.8038527609850763e-30,
        "Hash": "Ae2tdPwUPEZBTYWkpudmAYdyQM9CHcV9orEVnVSan6EP2xNApB5bLE1XsKF",
        "Type": 0,
      },
      Object {
        "AddressId": 27,
        "Digest": -3.2738732077215015e+237,
        "Hash": "Ae2tdPwUPEYzdEoDVNdvLz6kFgVsjEyUJ1z3mHzAT1HotQk31tRvGNM4tge",
        "Type": 0,
      },
      Object {
        "AddressId": 28,
        "Digest": 6.009965811065196e+234,
        "Hash": "Ae2tdPwUPEZ2NvzdECB18z3SBTc8SVvx1PJuxPKsnncygEZeeKNaAeBeLDg",
        "Type": 0,
      },
      Object {
        "AddressId": 29,
        "Digest": -3.412056347004804e-256,
        "Hash": "Ae2tdPwUPEZ3iMfnFWSM3zeqpNwAdT62jNgiA27x1ZEacpfVbViYWb7gyNP",
        "Type": 0,
      },
      Object {
        "AddressId": 30,
        "Digest": -1.4607797017835113e-25,
        "Hash": "Ae2tdPwUPEYykz6FbkuRf9ScRwZc8F1xobMPyzECjsdMyqobn2tVpL6pdDW",
        "Type": 0,
      },
      Object {
        "AddressId": 31,
        "Digest": -1.5492234544082762e+72,
        "Hash": "Ae2tdPwUPEZ8SUET76NhRhJ6TNLW48csZ4e87hu6JYobQvVTKSYDMPBU5Xa",
        "Type": 0,
      },
      Object {
        "AddressId": 32,
        "Digest": 6.397199081168596e-249,
        "Hash": "Ae2tdPwUPEZBryPRKuib729PQNSBxzgXsTVwmg3CWQjZaAS7pj4WZNa3VR6",
        "Type": 0,
      },
      Object {
        "AddressId": 33,
        "Digest": 2.699654694740964e-163,
        "Hash": "Ae2tdPwUPEZ6yyMqXFEYmLvqXqktpU8LR6oW8qVbaap7R2YJGc9xDbs2Eb6",
        "Type": 0,
      },
      Object {
        "AddressId": 34,
        "Digest": 3.2672025499521527e-301,
        "Hash": "Ae2tdPwUPEZ4gRK6Qhj3Mo4tSU4LkRiqVgsQm6rg8YBGC6fqVLNqA9REr7c",
        "Type": 0,
      },
      Object {
        "AddressId": 35,
        "Digest": 5.473082144527723e-299,
        "Hash": "Ae2tdPwUPEZ3xWm3GHFVNtVWcnyTGpSF6AjyhZJY3DuSGvf3WvwLzkBisFw",
        "Type": 0,
      },
      Object {
        "AddressId": 36,
        "Digest": -9.504830601258996e-107,
        "Hash": "Ae2tdPwUPEZL9BqYXyY6zQQoatsWbkcN6g46NfvCfaE8mQppcVgentdAXeo",
        "Type": 0,
      },
      Object {
        "AddressId": 37,
        "Digest": -2.255481392460208e-13,
        "Hash": "Ae2tdPwUPEYzxRSsoqFY2Ym7zQfSdosY1bdK8KZTEjPjcobHd3GbZ3qZpvB",
        "Type": 0,
      },
      Object {
        "AddressId": 38,
        "Digest": -3.382255898780831e+65,
        "Hash": "Ae2tdPwUPEZEdntBfWRH5ucNrQd7RwPjZ2QZEkxJbsJDBrCGnTtjqfb8Aph",
        "Type": 0,
      },
      Object {
        "AddressId": 39,
        "Digest": 6.040400230567571e+220,
        "Hash": "Ae2tdPwUPEZKDMDuUZBUSokAzeJwNpqHorYEPuycXBMMFameoVFkxwpLheC",
        "Type": 0,
      },
      Object {
        "AddressId": 40,
        "Digest": -1.2798377351521785e-185,
        "Hash": "Ae2tdPwUPEZ2E4XNPVarvndsmkC8n2vS9rXJfCxny9oVacViLRDpeKioaAc",
        "Type": 0,
      },
      Object {
        "AddressId": 41,
        "Digest": -1.3416871383074957e-161,
        "Hash": "Ae2tdPwUPEYxD5EgazsN7DcLp2fFiak1RTco6CoDNioKVuodftS4oNeabwz",
        "Type": 0,
      },
      Object {
        "AddressId": 42,
        "Digest": 2.414293239739638e-47,
        "Hash": "Ae2tdPwUPEZFqcMbS757FyZrABDZUVtzEW4sPvzZj3UYBcn8BSWFBxmQK2n",
        "Type": 0,
      },
      Object {
        "AddressId": 43,
        "Digest": 1.1036862858872953e+216,
        "Hash": "Ae2tdPwUPEZGR3uPidVc5p1cSnV9KDzDxrrembeFhLYMgFAa4KHpTqmncFQ",
        "Type": 0,
      },
      Object {
        "AddressId": 44,
        "Digest": -2.938948476649332e-97,
        "Hash": "Ae2tdPwUPEZEvn7nMBBaBMCc773zeMCPsS93tDsFvyZw4quRbnq5bnP1i8F",
        "Type": 0,
      },
      Object {
        "AddressId": 45,
        "Digest": 8.159203653530658e-92,
        "Hash": "Ae2tdPwUPEZAzQ7FdZ8ksAjK7iVGzjMKUxWqkQLF52oGxWBNfyDRocqJwBT",
        "Type": 0,
      },
      Object {
        "AddressId": 46,
        "Digest": -1.2688708748746819e-61,
        "Hash": "Ae2tdPwUPEZ5PxKxoyZDgjsKgMWMpTRa4PH3sVgARSGBsWwNBH3qg7cMFsP",
        "Type": 0,
      },
      Object {
        "AddressId": 47,
        "Digest": 3.0263387081779602e-151,
        "Hash": "Ae2tdPwUPEZE9RAm3d3zuuh22YjqDxhR1JF6G93uJsRrk51QGHzRUzLvDjL",
        "Type": 0,
      },
      Object {
        "AddressId": 48,
        "Digest": 3.0263387081779602e-151,
        "Hash": "Ae2tdPwUPEZE9RAm3d3zuuh22YjqDxhR1JF6G93uJsRrk51QGHzRUzLvDjL",
        "Type": 0,
      },
    ],
  },
  Object {
    "Block": Array [
      Object {
        "BlockId": 1,
        "BlockTime": 2019-09-13T16:37:16.000Z,
        "Digest": -6.352946211521613e-51,
        "Hash": "a9835cc1e0f9b6c239aec4c446a6e181b7db6a80ad53cc0b04f70c6b85e9ba25",
        "Height": 218608,
        "SlotNum": 219650,
      },
      Object {
        "BlockId": 2,
        "BlockTime": 2019-09-13T16:37:36.000Z,
        "Digest": -9.690691258114666e-56,
        "Hash": "a9835cc1e0f9b6c239aec4c446a6e181b7db6a80ad53cc0b04f70c6b85e9ba26",
        "Height": 218609,
        "SlotNum": 219651,
      },
    ],
  },
  Object {
    "LastSyncInfo": Array [
      Object {
        "BlockHash": null,
        "Height": 0,
        "LastSyncInfoId": 1,
        "SlotNum": null,
        "Time": 1970-01-01T00:00:00.004Z,
      },
    ],
  },
  Object {
    "Transaction": Array [
      Object {
        "BlockId": 2,
        "Digest": 8.191593645542673e-27,
        "ErrorMessage": null,
        "Hash": "29f2fe214ec2c9b05773a689eca797e903adeaaf51dfe20782a4bf401e7ed545",
        "LastUpdateTime": 1568392656000,
        "Ordinal": 0,
        "Status": -2,
        "TransactionId": 1,
      },
      Object {
        "BlockId": 1,
        "Digest": 1.249559827714551e-31,
        "ErrorMessage": null,
        "Hash": "29f2fe214ec2c9b05773a689eca797e903adeaaf51dfe20782a4bf401e7ed546",
        "LastUpdateTime": 1568392636000,
        "Ordinal": 0,
        "Status": -2,
        "TransactionId": 2,
      },
      Object {
        "BlockId": null,
        "Digest": 1.9060984568373646e-36,
        "ErrorMessage": null,
        "Hash": "29f2fe214ec2c9b05773a689eca797e903adeaaf51dfe20782a4bf401e7ed547",
        "LastUpdateTime": 1568392676000,
        "Ordinal": null,
        "Status": -1,
        "TransactionId": 3,
      },
    ],
  },
  Object {
    "UtxoTransactionInput": Array [
      Object {
        "AddressId": 46,
        "Amount": "4000000",
        "IndexInOwnTx": 0,
        "IndexInParentTx": 0,
        "ParentTxHash": "9c8d3c4fe576f8c99d8ad6ba5d889f5a9f2d7fe07dc17b3f425f5d17696f3d20",
        "TransactionId": 1,
        "UtxoTransactionInputId": 1,
      },
      Object {
        "AddressId": 46,
        "Amount": "4000000",
        "IndexInOwnTx": 0,
        "IndexInParentTx": 0,
        "ParentTxHash": "9c8d3c4fe576f8c99d8ad6ba5d889f5a9f2d7fe07dc17b3f425f5d17696f3d21",
        "TransactionId": 2,
        "UtxoTransactionInputId": 2,
      },
      Object {
        "AddressId": 5,
        "Amount": "2100000",
        "IndexInOwnTx": 0,
        "IndexInParentTx": 0,
        "ParentTxHash": "29f2fe214ec2c9b05773a689eca797e903adeaaf51dfe20782a4bf401e7ed546",
        "TransactionId": 3,
        "UtxoTransactionInputId": 3,
      },
    ],
  },
  Object {
    "UtxoTransactionOutput": Array [
      Object {
        "AddressId": 5,
        "Amount": "2100000",
        "IsUnspent": true,
        "OutputIndex": 0,
        "TransactionId": 1,
        "UtxoTransactionOutputId": 1,
      },
      Object {
        "AddressId": 47,
        "Amount": "1731391",
        "IsUnspent": true,
        "OutputIndex": 1,
        "TransactionId": 1,
        "UtxoTransactionOutputId": 2,
      },
      Object {
        "AddressId": 5,
        "Amount": "2100000",
        "IsUnspent": true,
        "OutputIndex": 0,
        "TransactionId": 2,
        "UtxoTransactionOutputId": 3,
      },
      Object {
        "AddressId": 47,
        "Amount": "1731391",
        "IsUnspent": true,
        "OutputIndex": 1,
        "TransactionId": 2,
        "UtxoTransactionOutputId": 4,
      },
      Object {
        "AddressId": 48,
        "Amount": "1900000",
        "IsUnspent": true,
        "OutputIndex": 0,
        "TransactionId": 3,
        "UtxoTransactionOutputId": 5,
      },
    ],
  },
]
`;

exports[`Syncing with failed cip1852 1`] = `
Object {
  "addressLookupMap": Map {
    9 => "0365267961fefd53aefe4cf741dc0df9902d360bca0de4c0abe88ca89d0d08dd3d",
    92 => "030efc40f8fb587734cbcdeeb62a99da3f123677ea1754338665f9a294fbc904fe",
    93 => "03b4c4b9e8e0ee0c71b67952f54a235495a450fd8e45e6be2ee2263f0b34009f85",
    94 => "03b4c4b9e8e0ee0c71b67952f54a235495a450fd8e45e6be2ee2263f0b34009f85",
  },
  "txs": Array [
    Object {
      "accountingInputs": Array [],
      "accountingOutputs": Array [],
      "amount": "-1900000",
      "block": null,
      "fee": "-200000",
      "transaction": Object {
        "BlockId": null,
        "Digest": 1.9060984568373646e-36,
        "ErrorMessage": null,
        "Hash": "29f2fe214ec2c9b05773a689eca797e903adeaaf51dfe20782a4bf401e7ed547",
        "LastUpdateTime": 1568392676000,
        "Ordinal": null,
        "Status": -1,
        "TransactionId": 3,
      },
      "type": "expend",
      "utxoInputs": Array [
        Object {
          "AddressId": 9,
          "Amount": "2100000",
          "IndexInOwnTx": 0,
          "IndexInParentTx": 0,
          "ParentTxHash": "29f2fe214ec2c9b05773a689eca797e903adeaaf51dfe20782a4bf401e7ed546",
          "TransactionId": 3,
          "UtxoTransactionInputId": 3,
        },
      ],
      "utxoOutputs": Array [
        Object {
          "AddressId": 94,
          "Amount": "1900000",
          "IsUnspent": true,
          "OutputIndex": 0,
          "TransactionId": 3,
          "UtxoTransactionOutputId": 5,
        },
      ],
    },
    Object {
      "accountingInputs": Array [],
      "accountingOutputs": Array [],
      "amount": "2100000",
      "block": Object {
        "BlockId": 2,
        "BlockTime": 2019-09-13T16:37:36.000Z,
        "Digest": -9.690691258114666e-56,
        "Hash": "a9835cc1e0f9b6c239aec4c446a6e181b7db6a80ad53cc0b04f70c6b85e9ba26",
        "Height": 218609,
        "SlotNum": 219651,
      },
      "fee": "0",
      "transaction": Object {
        "BlockId": 2,
        "Digest": 8.191593645542673e-27,
        "ErrorMessage": null,
        "Hash": "29f2fe214ec2c9b05773a689eca797e903adeaaf51dfe20782a4bf401e7ed545",
        "LastUpdateTime": 1568392656000,
        "Ordinal": 0,
        "Status": -2,
        "TransactionId": 1,
      },
      "type": "income",
      "utxoInputs": Array [
        Object {
          "AddressId": 92,
          "Amount": "4000000",
          "IndexInOwnTx": 0,
          "IndexInParentTx": 0,
          "ParentTxHash": "9c8d3c4fe576f8c99d8ad6ba5d889f5a9f2d7fe07dc17b3f425f5d17696f3d20",
          "TransactionId": 1,
          "UtxoTransactionInputId": 1,
        },
      ],
      "utxoOutputs": Array [
        Object {
          "AddressId": 9,
          "Amount": "2100000",
          "IsUnspent": true,
          "OutputIndex": 0,
          "TransactionId": 1,
          "UtxoTransactionOutputId": 1,
        },
        Object {
          "AddressId": 93,
          "Amount": "1731391",
          "IsUnspent": true,
          "OutputIndex": 1,
          "TransactionId": 1,
          "UtxoTransactionOutputId": 2,
        },
      ],
    },
    Object {
      "accountingInputs": Array [],
      "accountingOutputs": Array [],
      "amount": "2100000",
      "block": Object {
        "BlockId": 1,
        "BlockTime": 2019-09-13T16:37:16.000Z,
        "Digest": -6.352946211521613e-51,
        "Hash": "a9835cc1e0f9b6c239aec4c446a6e181b7db6a80ad53cc0b04f70c6b85e9ba25",
        "Height": 218608,
        "SlotNum": 219650,
      },
      "fee": "0",
      "transaction": Object {
        "BlockId": 1,
        "Digest": 1.249559827714551e-31,
        "ErrorMessage": null,
        "Hash": "29f2fe214ec2c9b05773a689eca797e903adeaaf51dfe20782a4bf401e7ed546",
        "LastUpdateTime": 1568392636000,
        "Ordinal": 0,
        "Status": -2,
        "TransactionId": 2,
      },
      "type": "income",
      "utxoInputs": Array [
        Object {
          "AddressId": 92,
          "Amount": "4000000",
          "IndexInOwnTx": 0,
          "IndexInParentTx": 0,
          "ParentTxHash": "9c8d3c4fe576f8c99d8ad6ba5d889f5a9f2d7fe07dc17b3f425f5d17696f3d21",
          "TransactionId": 2,
          "UtxoTransactionInputId": 2,
        },
      ],
      "utxoOutputs": Array [
        Object {
          "AddressId": 9,
          "Amount": "2100000",
          "IsUnspent": true,
          "OutputIndex": 0,
          "TransactionId": 2,
          "UtxoTransactionOutputId": 3,
        },
        Object {
          "AddressId": 93,
          "Amount": "1731391",
          "IsUnspent": true,
          "OutputIndex": 1,
          "TransactionId": 2,
          "UtxoTransactionOutputId": 4,
        },
      ],
    },
  ],
}
`;

exports[`Syncing with failed cip1852 2`] = `
Array [
  Object {
    "Address": Array [
      Object {
        "AddressId": 1,
        "Digest": 1.922922635850615e+73,
        "Hash": "0352c71486899f2363d2cb632caf375024fbef4f44c06915168f50659430ef0e42",
        "Type": 1,
      },
      Object {
        "AddressId": 2,
        "Digest": -8.973804533115101e-139,
        "Hash": "0452c71486899f2363d2cb632caf375024fbef4f44c06915168f50659430ef0e425247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 3,
        "Digest": 1.0883133173279063e-79,
        "Hash": "03d986f34f3dfe72815ec0eda0772e178b065e665cc82104c7cc3e5dac31829f30",
        "Type": 1,
      },
      Object {
        "AddressId": 4,
        "Digest": 3.894757034205239e-214,
        "Hash": "04d986f34f3dfe72815ec0eda0772e178b065e665cc82104c7cc3e5dac31829f305247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 5,
        "Digest": 3.0308179804035946e-292,
        "Hash": "03ec6e856eeffd4fa9ec0fa7e9edc786e63261530676fcb0215bf95ad4a11f6130",
        "Type": 1,
      },
      Object {
        "AddressId": 6,
        "Digest": 1.5172123864507825e-98,
        "Hash": "04ec6e856eeffd4fa9ec0fa7e9edc786e63261530676fcb0215bf95ad4a11f61305247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 7,
        "Digest": -7.670208771995583e-16,
        "Hash": "03353e1d2014267dab1eab991e6feed8b4fa403fb8527f9427483ab00e8e60876b",
        "Type": 1,
      },
      Object {
        "AddressId": 8,
        "Digest": 1.3955104998854326e-87,
        "Hash": "04353e1d2014267dab1eab991e6feed8b4fa403fb8527f9427483ab00e8e60876b5247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 9,
        "Digest": -6.983535077310985e-273,
        "Hash": "0365267961fefd53aefe4cf741dc0df9902d360bca0de4c0abe88ca89d0d08dd3d",
        "Type": 1,
      },
      Object {
        "AddressId": 10,
        "Digest": 2.0937025834614076e-166,
        "Hash": "0465267961fefd53aefe4cf741dc0df9902d360bca0de4c0abe88ca89d0d08dd3d5247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 11,
        "Digest": -3.4154394917068124e-262,
        "Hash": "03dc749dd61975bcc821ede55c8c723323f6be77c19c6a83e32416a320a5ea28d8",
        "Type": 1,
      },
      Object {
        "AddressId": 12,
        "Digest": 2.1341610929379014e+291,
        "Hash": "04dc749dd61975bcc821ede55c8c723323f6be77c19c6a83e32416a320a5ea28d85247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 13,
        "Digest": -3.260831817002079e+86,
        "Hash": "03c85a92119ec9be94aa91d08acb04b6bdcbcc3c97718aca0ffbe5fdad6907980e",
        "Type": 1,
      },
      Object {
        "AddressId": 14,
        "Digest": -2.0773825810144208e-233,
        "Hash": "04c85a92119ec9be94aa91d08acb04b6bdcbcc3c97718aca0ffbe5fdad6907980e5247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 15,
        "Digest": 2.6110256949291756e-156,
        "Hash": "03904b12c5cd669178cae04c2f601acd3468e1a826ae3248f8defb23d75681317c",
        "Type": 1,
      },
      Object {
        "AddressId": 16,
        "Digest": 7.879859283786793e-198,
        "Hash": "04904b12c5cd669178cae04c2f601acd3468e1a826ae3248f8defb23d75681317c5247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 17,
        "Digest": 2.5160473703032145e+277,
        "Hash": "03a03a99e0894849074e8f689fdf5e99276a56f6c9f7dab5efd50ddeb78e9a38fb",
        "Type": 1,
      },
      Object {
        "AddressId": 18,
        "Digest": 2.7688009473793197e-45,
        "Hash": "04a03a99e0894849074e8f689fdf5e99276a56f6c9f7dab5efd50ddeb78e9a38fb5247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 19,
        "Digest": -15694896.13034338,
        "Hash": "03b6d58964c5542a5f7c5cfd1a4974e9c29bb5eb6616a13f1282119539e9e0ebc3",
        "Type": 1,
      },
      Object {
        "AddressId": 20,
        "Digest": 8.327636036414499e-228,
        "Hash": "04b6d58964c5542a5f7c5cfd1a4974e9c29bb5eb6616a13f1282119539e9e0ebc35247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 21,
        "Digest": -1.830605464076875e-116,
        "Hash": "03cf41217c4ff64ad3fa35bc1c3e78019a28a6bb3d6fa532ac6fd08a249be7ee21",
        "Type": 1,
      },
      Object {
        "AddressId": 22,
        "Digest": 4.342581771240852e+139,
        "Hash": "04cf41217c4ff64ad3fa35bc1c3e78019a28a6bb3d6fa532ac6fd08a249be7ee215247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 23,
        "Digest": -5.005604641213275e-140,
        "Hash": "03ef4d0d86cdc1d0080f3a2bd06f281a1835298daa8e413716e4e12a4886474d36",
        "Type": 1,
      },
      Object {
        "AddressId": 24,
        "Digest": 3.522045464001792e-167,
        "Hash": "04ef4d0d86cdc1d0080f3a2bd06f281a1835298daa8e413716e4e12a4886474d365247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 25,
        "Digest": -9.660229661320306e+303,
        "Hash": "03e72322fcbfab91c9c73409dd0927ff0ec131804a1297561983604a3b1544b74a",
        "Type": 1,
      },
      Object {
        "AddressId": 26,
        "Digest": -1.4950943512380345e-270,
        "Hash": "04e72322fcbfab91c9c73409dd0927ff0ec131804a1297561983604a3b1544b74a5247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 27,
        "Digest": -6.56501252867694e+220,
        "Hash": "0362de4001174dca7a9cf5679ac30ccf94a2d139dfa507fd310ad6fbc315072bcf",
        "Type": 1,
      },
      Object {
        "AddressId": 28,
        "Digest": -6.059591666328581e-235,
        "Hash": "0462de4001174dca7a9cf5679ac30ccf94a2d139dfa507fd310ad6fbc315072bcf5247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 29,
        "Digest": 1.8441503078755835e-12,
        "Hash": "03db47ba226eafc2e2357cbc5699b563b7149521a6bf2bb4e5bf3f1bc543079fab",
        "Type": 1,
      },
      Object {
        "AddressId": 30,
        "Digest": 993985865885332900000,
        "Hash": "04db47ba226eafc2e2357cbc5699b563b7149521a6bf2bb4e5bf3f1bc543079fab5247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 31,
        "Digest": -3.1404564843373737e+251,
        "Hash": "0382c63ff3a2db1e1330178dd894d9a339773943cf452fc8382d0018f19d01ebcf",
        "Type": 1,
      },
      Object {
        "AddressId": 32,
        "Digest": 2.578677539652743e+124,
        "Hash": "0482c63ff3a2db1e1330178dd894d9a339773943cf452fc8382d0018f19d01ebcf5247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 33,
        "Digest": 1.0294115761657875e+196,
        "Hash": "03f36159a7870b4aef4e2562bc23bdae3b56409303855fee452275c8cb5b0d925d",
        "Type": 1,
      },
      Object {
        "AddressId": 34,
        "Digest": 4.380501561208488e+302,
        "Hash": "04f36159a7870b4aef4e2562bc23bdae3b56409303855fee452275c8cb5b0d925d5247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 35,
        "Digest": -3.7952662148300146e-265,
        "Hash": "0319d35bcf29955f755682c336d780efd0be4c2a8d1aeb013d8fe9920006ad8621",
        "Type": 1,
      },
      Object {
        "AddressId": 36,
        "Digest": 4.1235520065013795e+28,
        "Hash": "0419d35bcf29955f755682c336d780efd0be4c2a8d1aeb013d8fe9920006ad86215247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 37,
        "Digest": -1.133695130948707e+60,
        "Hash": "03aacb11418cd56d8e9be3a25cb0d1308800f112fe635d192a4db4d3b3b6b41e3a",
        "Type": 1,
      },
      Object {
        "AddressId": 38,
        "Digest": 8.681037145507579e+230,
        "Hash": "04aacb11418cd56d8e9be3a25cb0d1308800f112fe635d192a4db4d3b3b6b41e3a5247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 39,
        "Digest": 1.2678098721815103e+36,
        "Hash": "038e2840fed90d2138761d8a14a4cbed08ed00cf908b07f94ec5fa9db6f4d7e74f",
        "Type": 1,
      },
      Object {
        "AddressId": 40,
        "Digest": -1.1668537467860038e-147,
        "Hash": "048e2840fed90d2138761d8a14a4cbed08ed00cf908b07f94ec5fa9db6f4d7e74f5247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 41,
        "Digest": -3.5217891672997486e+307,
        "Hash": "03c7cb0e3cd882555eeb8ddc58947eb40cba96c671ccf6806e377287ca087ad1e9",
        "Type": 1,
      },
      Object {
        "AddressId": 42,
        "Digest": -1.276107101639704e-75,
        "Hash": "04c7cb0e3cd882555eeb8ddc58947eb40cba96c671ccf6806e377287ca087ad1e95247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 43,
        "Digest": -1.070825587517362e-17,
        "Hash": "0352d1c87ebad693e50841f608c85d651928f7a77fe88145c9b93a843446104072",
        "Type": 1,
      },
      Object {
        "AddressId": 44,
        "Digest": -6.249225645367354e+175,
        "Hash": "0452d1c87ebad693e50841f608c85d651928f7a77fe88145c9b93a8434461040725247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 45,
        "Digest": -4.155339257689695e-64,
        "Hash": "03e32694490558a7bb371c47f6a39c11fc924d61c2212ee08511d376e21dbc250e",
        "Type": 1,
      },
      Object {
        "AddressId": 46,
        "Digest": 5.226534593211332e+116,
        "Hash": "04e32694490558a7bb371c47f6a39c11fc924d61c2212ee08511d376e21dbc250e5247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 47,
        "Digest": 5.766462874874761e-63,
        "Hash": "035413ddc555eb58ccc0f543e7b331c5f22bf7a1e377e5a1829141faa6f6ad44dd",
        "Type": 1,
      },
      Object {
        "AddressId": 48,
        "Digest": 6.168620814132152e-278,
        "Hash": "045413ddc555eb58ccc0f543e7b331c5f22bf7a1e377e5a1829141faa6f6ad44dd5247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 49,
        "Digest": -8.52574129724981e-112,
        "Hash": "03dcd05c5ce770f9d27709978e8462f2f709d416473e174eeb016b2e78ce570589",
        "Type": 1,
      },
      Object {
        "AddressId": 50,
        "Digest": -5.790660025889179e+143,
        "Hash": "04dcd05c5ce770f9d27709978e8462f2f709d416473e174eeb016b2e78ce5705895247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 51,
        "Digest": -6.164495396334147e+60,
        "Hash": "03cfdc28d7b0670b2422312b7f4ef286bc759dc4940cdccab29fe981bd91903aa4",
        "Type": 1,
      },
      Object {
        "AddressId": 52,
        "Digest": -1.3461679552430524e-43,
        "Hash": "04cfdc28d7b0670b2422312b7f4ef286bc759dc4940cdccab29fe981bd91903aa45247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 53,
        "Digest": -8.214771215725454e-9,
        "Hash": "0390511d90c8e7b1b867ce362b8aa533db1794b4efa9b0250a631b9fa314aec6cf",
        "Type": 1,
      },
      Object {
        "AddressId": 54,
        "Digest": 2.845230900133933e-139,
        "Hash": "0490511d90c8e7b1b867ce362b8aa533db1794b4efa9b0250a631b9fa314aec6cf5247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 55,
        "Digest": 2.1793558794405924e-290,
        "Hash": "03ac0ddbdf7fdcd82900b218ac341b49b26ec8ff3bb46c7d5a72a5dcb7437304e0",
        "Type": 1,
      },
      Object {
        "AddressId": 56,
        "Digest": -6.398283114588265e-293,
        "Hash": "04ac0ddbdf7fdcd82900b218ac341b49b26ec8ff3bb46c7d5a72a5dcb7437304e05247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 57,
        "Digest": 2.2035557457558316e+291,
        "Hash": "033632d8aa23fc0fc0de7193ca1012406e3ecc0b7aa4ec623bd71befd5d6c6ef97",
        "Type": 1,
      },
      Object {
        "AddressId": 58,
        "Digest": -5.492027213830002e-113,
        "Hash": "043632d8aa23fc0fc0de7193ca1012406e3ecc0b7aa4ec623bd71befd5d6c6ef975247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 59,
        "Digest": 2.0754609298659098e-116,
        "Hash": "0336f6d9b7ba83aca4081fcfba941af2727f580d2a3035684095a3e7adb1c8508a",
        "Type": 1,
      },
      Object {
        "AddressId": 60,
        "Digest": 4.289960407868709e+69,
        "Hash": "0436f6d9b7ba83aca4081fcfba941af2727f580d2a3035684095a3e7adb1c8508a5247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 61,
        "Digest": 2.4714136713811983e-142,
        "Hash": "03739e6d75e648099a73daa44a373ac2e0a8f2a8f0a127f634065c5b383164674c",
        "Type": 1,
      },
      Object {
        "AddressId": 62,
        "Digest": -1.6429409049031442e+217,
        "Hash": "04739e6d75e648099a73daa44a373ac2e0a8f2a8f0a127f634065c5b383164674c5247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 63,
        "Digest": 1.972754860672515e+52,
        "Hash": "03789536842e6c45d676bb10fa6466d809455df0ca86db97c7dd91a96eb21faf32",
        "Type": 1,
      },
      Object {
        "AddressId": 64,
        "Digest": 2.9586942333679952e+141,
        "Hash": "04789536842e6c45d676bb10fa6466d809455df0ca86db97c7dd91a96eb21faf325247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 65,
        "Digest": -1.429533798906611e-61,
        "Hash": "0324bf79606e7932e936e2dc18d7cf2e1d213e10a48d125ec005ce2800ba87828e",
        "Type": 1,
      },
      Object {
        "AddressId": 66,
        "Digest": 2.2364075324220344e+58,
        "Hash": "0424bf79606e7932e936e2dc18d7cf2e1d213e10a48d125ec005ce2800ba87828e5247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 67,
        "Digest": 1.1412918332680562e-147,
        "Hash": "035f491e964a08005f0f9790273ad23351735a3214a5660c43414553fbb4f2422b",
        "Type": 1,
      },
      Object {
        "AddressId": 68,
        "Digest": 1.023787994285192e-262,
        "Hash": "045f491e964a08005f0f9790273ad23351735a3214a5660c43414553fbb4f2422b5247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 69,
        "Digest": 5.608282908766105e+281,
        "Hash": "03896c84e4aa0522a289d83cca24c65772683b7c0b2ef2c300cc3f26b4619ac1a1",
        "Type": 1,
      },
      Object {
        "AddressId": 70,
        "Digest": 8.456267375156029e+214,
        "Hash": "04896c84e4aa0522a289d83cca24c65772683b7c0b2ef2c300cc3f26b4619ac1a15247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 71,
        "Digest": -5.2476841852531136e-73,
        "Hash": "03c8fb0cf805ea8654f9410d7c14c6b92afbdaa13166b6e264eb5fd43dabe1601f",
        "Type": 1,
      },
      Object {
        "AddressId": 72,
        "Digest": 811512290302852700,
        "Hash": "04c8fb0cf805ea8654f9410d7c14c6b92afbdaa13166b6e264eb5fd43dabe1601f5247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 73,
        "Digest": -2.872422206576991e+248,
        "Hash": "03f88866ee1c0ba99866f2f04acbdccab63b5b90a39c15de9d05852883a5d46f6a",
        "Type": 1,
      },
      Object {
        "AddressId": 74,
        "Digest": -1.0531279508968161e-52,
        "Hash": "04f88866ee1c0ba99866f2f04acbdccab63b5b90a39c15de9d05852883a5d46f6a5247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 75,
        "Digest": 2.819334940847802e+85,
        "Hash": "037871a04e08108cc88453241ae5d1b9133bdfe1079188c2cf24bd27e065ce7b36",
        "Type": 1,
      },
      Object {
        "AddressId": 76,
        "Digest": -6.585277644912857e+152,
        "Hash": "047871a04e08108cc88453241ae5d1b9133bdfe1079188c2cf24bd27e065ce7b365247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 77,
        "Digest": -8.427052312213728e+300,
        "Hash": "039793ed04524a4dbb5cc49d7192744dd01f103fd725964972060ca34c2bc72808",
        "Type": 1,
      },
      Object {
        "AddressId": 78,
        "Digest": -7.430238058498852e+88,
        "Hash": "049793ed04524a4dbb5cc49d7192744dd01f103fd725964972060ca34c2bc728085247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 79,
        "Digest": -3.240678562287037e+230,
        "Hash": "0326a4e2f795d2ca4600fad14fc8f109c7b900c5d552d7e1f75cc7601f16ca5ccb",
        "Type": 1,
      },
      Object {
        "AddressId": 80,
        "Digest": -3.7681976654108256e-283,
        "Hash": "0426a4e2f795d2ca4600fad14fc8f109c7b900c5d552d7e1f75cc7601f16ca5ccb5247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 81,
        "Digest": -3.369579143058011e-295,
        "Hash": "055247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 3,
      },
      Object {
        "AddressId": 82,
        "Digest": 4.2651914971852276e+78,
        "Hash": "037ffec36b45386bd6fe18dee3b4d7f064ff1034c84b13fb4e99aaa48d31821053",
        "Type": 1,
      },
      Object {
        "AddressId": 83,
        "Digest": 2.1413180872296113e-207,
        "Hash": "047ffec36b45386bd6fe18dee3b4d7f064ff1034c84b13fb4e99aaa48d318210535247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 84,
        "Digest": -1.2126180396067397e+287,
        "Hash": "03121f56bf549fc3c463729a966c716f55eb7a93ed40ae1c8b56896d5758415ef1",
        "Type": 1,
      },
      Object {
        "AddressId": 85,
        "Digest": 1.326664329951578e-300,
        "Hash": "04121f56bf549fc3c463729a966c716f55eb7a93ed40ae1c8b56896d5758415ef15247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 86,
        "Digest": -2.358051133671872e-274,
        "Hash": "038d9a4b1f2d546f57d4153fe8312e70b6af8189161590464b83d1bb303e149380",
        "Type": 1,
      },
      Object {
        "AddressId": 87,
        "Digest": 1.4479423370180254e-249,
        "Hash": "048d9a4b1f2d546f57d4153fe8312e70b6af8189161590464b83d1bb303e1493805247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 88,
        "Digest": -1.0802379569166083e-285,
        "Hash": "0392568cab2a8c062e27a05abacf5352fec7efe5b6639b54ca123634b014410ae9",
        "Type": 1,
      },
      Object {
        "AddressId": 89,
        "Digest": -5.553275526085591e-296,
        "Hash": "0492568cab2a8c062e27a05abacf5352fec7efe5b6639b54ca123634b014410ae95247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 90,
        "Digest": 1.0440318629600951e-244,
        "Hash": "03bf2c23a99181059e7b9bd372b0eb827a4ef5cf37a1a54ce7e2c4d7c014c70459",
        "Type": 1,
      },
      Object {
        "AddressId": 91,
        "Digest": -1.1377569017604921e-61,
        "Hash": "04bf2c23a99181059e7b9bd372b0eb827a4ef5cf37a1a54ce7e2c4d7c014c704595247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 92,
        "Digest": 1.8319278958118063e+140,
        "Hash": "030efc40f8fb587734cbcdeeb62a99da3f123677ea1754338665f9a294fbc904fe",
        "Type": 1,
      },
      Object {
        "AddressId": 93,
        "Digest": 9.246378790476663e-275,
        "Hash": "03b4c4b9e8e0ee0c71b67952f54a235495a450fd8e45e6be2ee2263f0b34009f85",
        "Type": 1,
      },
      Object {
        "AddressId": 94,
        "Digest": 9.246378790476663e-275,
        "Hash": "03b4c4b9e8e0ee0c71b67952f54a235495a450fd8e45e6be2ee2263f0b34009f85",
        "Type": 1,
      },
    ],
  },
  Object {
    "Block": Array [
      Object {
        "BlockId": 1,
        "BlockTime": 2019-09-13T16:37:16.000Z,
        "Digest": -6.352946211521613e-51,
        "Hash": "a9835cc1e0f9b6c239aec4c446a6e181b7db6a80ad53cc0b04f70c6b85e9ba25",
        "Height": 218608,
        "SlotNum": 219650,
      },
      Object {
        "BlockId": 2,
        "BlockTime": 2019-09-13T16:37:36.000Z,
        "Digest": -9.690691258114666e-56,
        "Hash": "a9835cc1e0f9b6c239aec4c446a6e181b7db6a80ad53cc0b04f70c6b85e9ba26",
        "Height": 218609,
        "SlotNum": 219651,
      },
    ],
  },
  Object {
    "LastSyncInfo": Array [
      Object {
        "BlockHash": null,
        "Height": 0,
        "LastSyncInfoId": 1,
        "SlotNum": null,
        "Time": 1970-01-01T00:00:00.004Z,
      },
    ],
  },
  Object {
    "Transaction": Array [
      Object {
        "BlockId": 2,
        "Digest": 8.191593645542673e-27,
        "ErrorMessage": null,
        "Hash": "29f2fe214ec2c9b05773a689eca797e903adeaaf51dfe20782a4bf401e7ed545",
        "LastUpdateTime": 1568392656000,
        "Ordinal": 0,
        "Status": -2,
        "TransactionId": 1,
      },
      Object {
        "BlockId": 1,
        "Digest": 1.249559827714551e-31,
        "ErrorMessage": null,
        "Hash": "29f2fe214ec2c9b05773a689eca797e903adeaaf51dfe20782a4bf401e7ed546",
        "LastUpdateTime": 1568392636000,
        "Ordinal": 0,
        "Status": -2,
        "TransactionId": 2,
      },
      Object {
        "BlockId": null,
        "Digest": 1.9060984568373646e-36,
        "ErrorMessage": null,
        "Hash": "29f2fe214ec2c9b05773a689eca797e903adeaaf51dfe20782a4bf401e7ed547",
        "LastUpdateTime": 1568392676000,
        "Ordinal": null,
        "Status": -1,
        "TransactionId": 3,
      },
    ],
  },
  Object {
    "UtxoTransactionInput": Array [
      Object {
        "AddressId": 92,
        "Amount": "4000000",
        "IndexInOwnTx": 0,
        "IndexInParentTx": 0,
        "ParentTxHash": "9c8d3c4fe576f8c99d8ad6ba5d889f5a9f2d7fe07dc17b3f425f5d17696f3d20",
        "TransactionId": 1,
        "UtxoTransactionInputId": 1,
      },
      Object {
        "AddressId": 92,
        "Amount": "4000000",
        "IndexInOwnTx": 0,
        "IndexInParentTx": 0,
        "ParentTxHash": "9c8d3c4fe576f8c99d8ad6ba5d889f5a9f2d7fe07dc17b3f425f5d17696f3d21",
        "TransactionId": 2,
        "UtxoTransactionInputId": 2,
      },
      Object {
        "AddressId": 9,
        "Amount": "2100000",
        "IndexInOwnTx": 0,
        "IndexInParentTx": 0,
        "ParentTxHash": "29f2fe214ec2c9b05773a689eca797e903adeaaf51dfe20782a4bf401e7ed546",
        "TransactionId": 3,
        "UtxoTransactionInputId": 3,
      },
    ],
  },
  Object {
    "UtxoTransactionOutput": Array [
      Object {
        "AddressId": 9,
        "Amount": "2100000",
        "IsUnspent": true,
        "OutputIndex": 0,
        "TransactionId": 1,
        "UtxoTransactionOutputId": 1,
      },
      Object {
        "AddressId": 93,
        "Amount": "1731391",
        "IsUnspent": true,
        "OutputIndex": 1,
        "TransactionId": 1,
        "UtxoTransactionOutputId": 2,
      },
      Object {
        "AddressId": 9,
        "Amount": "2100000",
        "IsUnspent": true,
        "OutputIndex": 0,
        "TransactionId": 2,
        "UtxoTransactionOutputId": 3,
      },
      Object {
        "AddressId": 93,
        "Amount": "1731391",
        "IsUnspent": true,
        "OutputIndex": 1,
        "TransactionId": 2,
        "UtxoTransactionOutputId": 4,
      },
      Object {
        "AddressId": 94,
        "Amount": "1900000",
        "IsUnspent": true,
        "OutputIndex": 0,
        "TransactionId": 3,
        "UtxoTransactionOutputId": 5,
      },
    ],
  },
]
`;

exports[`Syncing with pending bip44 1`] = `
Object {
  "addressLookupMap": Map {
    5 => "Ae2tdPwUPEZ6tzHKyuMLL6bh1au5DETgb53PTmJAN9aaCLtaUTWHvrS2mxo",
    46 => "Ae2tdPwUPEZ5PxKxoyZDgjsKgMWMpTRa4PH3sVgARSGBsWwNBH3qg7cMFsP",
    47 => "Ae2tdPwUPEZE9RAm3d3zuuh22YjqDxhR1JF6G93uJsRrk51QGHzRUzLvDjL",
    48 => "Ae2tdPwUPEZE9RAm3d3zuuh22YjqDxhR1JF6G93uJsRrk51QGHzRUzLvDjL",
  },
  "txs": Array [
    Object {
      "accountingInputs": Array [],
      "accountingOutputs": Array [],
      "amount": "-1900000",
      "block": null,
      "fee": "-200000",
      "transaction": Object {
        "BlockId": null,
        "Digest": 1.9060984568373646e-36,
        "ErrorMessage": null,
        "Hash": "29f2fe214ec2c9b05773a689eca797e903adeaaf51dfe20782a4bf401e7ed547",
        "LastUpdateTime": 1568392676000,
        "Ordinal": null,
        "Status": -2,
        "TransactionId": 3,
      },
      "type": "expend",
      "utxoInputs": Array [
        Object {
          "AddressId": 5,
          "Amount": "2100000",
          "IndexInOwnTx": 0,
          "IndexInParentTx": 0,
          "ParentTxHash": "29f2fe214ec2c9b05773a689eca797e903adeaaf51dfe20782a4bf401e7ed546",
          "TransactionId": 3,
          "UtxoTransactionInputId": 3,
        },
      ],
      "utxoOutputs": Array [
        Object {
          "AddressId": 48,
          "Amount": "1900000",
          "IsUnspent": true,
          "OutputIndex": 0,
          "TransactionId": 3,
          "UtxoTransactionOutputId": 5,
        },
      ],
    },
    Object {
      "accountingInputs": Array [],
      "accountingOutputs": Array [],
      "amount": "2100000",
      "block": Object {
        "BlockId": 2,
        "BlockTime": 2019-09-13T16:37:36.000Z,
        "Digest": -9.690691258114666e-56,
        "Hash": "a9835cc1e0f9b6c239aec4c446a6e181b7db6a80ad53cc0b04f70c6b85e9ba26",
        "Height": 218609,
        "SlotNum": 219651,
      },
      "fee": "0",
      "transaction": Object {
        "BlockId": 2,
        "Digest": 8.191593645542673e-27,
        "ErrorMessage": null,
        "Hash": "29f2fe214ec2c9b05773a689eca797e903adeaaf51dfe20782a4bf401e7ed545",
        "LastUpdateTime": 1568392656000,
        "Ordinal": 0,
        "Status": -2,
        "TransactionId": 1,
      },
      "type": "income",
      "utxoInputs": Array [
        Object {
          "AddressId": 46,
          "Amount": "4000000",
          "IndexInOwnTx": 0,
          "IndexInParentTx": 0,
          "ParentTxHash": "9c8d3c4fe576f8c99d8ad6ba5d889f5a9f2d7fe07dc17b3f425f5d17696f3d20",
          "TransactionId": 1,
          "UtxoTransactionInputId": 1,
        },
      ],
      "utxoOutputs": Array [
        Object {
          "AddressId": 5,
          "Amount": "2100000",
          "IsUnspent": true,
          "OutputIndex": 0,
          "TransactionId": 1,
          "UtxoTransactionOutputId": 1,
        },
        Object {
          "AddressId": 47,
          "Amount": "1731391",
          "IsUnspent": true,
          "OutputIndex": 1,
          "TransactionId": 1,
          "UtxoTransactionOutputId": 2,
        },
      ],
    },
    Object {
      "accountingInputs": Array [],
      "accountingOutputs": Array [],
      "amount": "2100000",
      "block": Object {
        "BlockId": 1,
        "BlockTime": 2019-09-13T16:37:16.000Z,
        "Digest": -6.352946211521613e-51,
        "Hash": "a9835cc1e0f9b6c239aec4c446a6e181b7db6a80ad53cc0b04f70c6b85e9ba25",
        "Height": 218608,
        "SlotNum": 219650,
      },
      "fee": "0",
      "transaction": Object {
        "BlockId": 1,
        "Digest": 1.249559827714551e-31,
        "ErrorMessage": null,
        "Hash": "29f2fe214ec2c9b05773a689eca797e903adeaaf51dfe20782a4bf401e7ed546",
        "LastUpdateTime": 1568392636000,
        "Ordinal": 0,
        "Status": -2,
        "TransactionId": 2,
      },
      "type": "income",
      "utxoInputs": Array [
        Object {
          "AddressId": 46,
          "Amount": "4000000",
          "IndexInOwnTx": 0,
          "IndexInParentTx": 0,
          "ParentTxHash": "9c8d3c4fe576f8c99d8ad6ba5d889f5a9f2d7fe07dc17b3f425f5d17696f3d21",
          "TransactionId": 2,
          "UtxoTransactionInputId": 2,
        },
      ],
      "utxoOutputs": Array [
        Object {
          "AddressId": 5,
          "Amount": "2100000",
          "IsUnspent": true,
          "OutputIndex": 0,
          "TransactionId": 2,
          "UtxoTransactionOutputId": 3,
        },
        Object {
          "AddressId": 47,
          "Amount": "1731391",
          "IsUnspent": true,
          "OutputIndex": 1,
          "TransactionId": 2,
          "UtxoTransactionOutputId": 4,
        },
      ],
    },
  ],
}
`;

exports[`Syncing with pending bip44 2`] = `
Array [
  Object {
    "Address": Array [
      Object {
        "AddressId": 1,
        "Digest": -5.18814298093809e+161,
        "Hash": "Ae2tdPwUPEZCfyggUgSxD1E5UCx5f5hrXCdvQjJszxE7epyZ4ox9vRNUbHf",
        "Type": 0,
      },
      Object {
        "AddressId": 2,
        "Digest": 4.005897187270229e+39,
        "Hash": "Ae2tdPwUPEZFXnw5T5aXoaP28yw4mRLeYomaG9mPGCFbPUtw368ZWYKp1zM",
        "Type": 0,
      },
      Object {
        "AddressId": 3,
        "Digest": -1.9091532612969177e-131,
        "Hash": "Ae2tdPwUPEZ8gpDazyi8VtcGMnMrkpKxts6ppCT45mdT6WMZEwHXs7pP8Tg",
        "Type": 0,
      },
      Object {
        "AddressId": 4,
        "Digest": -2.400376372464157e+124,
        "Hash": "Ae2tdPwUPEZBFhEBZgvm3fQeuW2zBPochfQehFtXn6tCRQy7zsQ9Px88jsH",
        "Type": 0,
      },
      Object {
        "AddressId": 5,
        "Digest": 9.948420953505185e-47,
        "Hash": "Ae2tdPwUPEZ6tzHKyuMLL6bh1au5DETgb53PTmJAN9aaCLtaUTWHvrS2mxo",
        "Type": 0,
      },
      Object {
        "AddressId": 6,
        "Digest": 9.326602089821879e-30,
        "Hash": "Ae2tdPwUPEYxzZH7sSyyXK6DDmjCxRajXUXFqbEjtxfPN7HZzQfXr4hxKwT",
        "Type": 0,
      },
      Object {
        "AddressId": 7,
        "Digest": 4.871145213048404e-43,
        "Hash": "Ae2tdPwUPEZMUQdcxu6AEoq9wzL8mtSCKhWUNhYjXqq1aenwimnLaCit1FY",
        "Type": 0,
      },
      Object {
        "AddressId": 8,
        "Digest": 6.75274668731026e+61,
        "Hash": "Ae2tdPwUPEYw9VvB1BQqgGd8XzNfgz4mv9gBjB9P8EtvPQfz4D8Gt4xnQog",
        "Type": 0,
      },
      Object {
        "AddressId": 9,
        "Digest": -7.631163428764417e+276,
        "Hash": "Ae2tdPwUPEYxYn4T89ffVqpDwqwsMDAZTcfnWBqAkjoem5sgaVKGU3FUB2E",
        "Type": 0,
      },
      Object {
        "AddressId": 10,
        "Digest": -1.6017303425870374e-101,
        "Hash": "Ae2tdPwUPEZBZ9aYboQuf5PFcjuZRCosBhLkUCxSQw1vqk3iyK5qGo5CJWe",
        "Type": 0,
      },
      Object {
        "AddressId": 11,
        "Digest": -6.537349771934158e+223,
        "Hash": "Ae2tdPwUPEZ4yCaYs3j7pPPaM9iA3KLruJkKjmUBBLKYzpJUHutWdS6EkKa",
        "Type": 0,
      },
      Object {
        "AddressId": 12,
        "Digest": -5.3866774008751e-237,
        "Hash": "Ae2tdPwUPEZ5zV8wqC9gPvkDtr2MS3Ys2vQbyPdM4wsdnzevbqnaJFg62hk",
        "Type": 0,
      },
      Object {
        "AddressId": 13,
        "Digest": 1.382203475035168e-237,
        "Hash": "Ae2tdPwUPEZAD1KmgTQ4zS6Q5s4VXWDXqB3ZmM1abQGoyrGN8qCsZyXc3vf",
        "Type": 0,
      },
      Object {
        "AddressId": 14,
        "Digest": 2.490260903712286e+254,
        "Hash": "Ae2tdPwUPEZ1SFwQMGroCTabfCPJ1RiK8D2F11C1vTMi14tX1XK2uogRWqM",
        "Type": 0,
      },
      Object {
        "AddressId": 15,
        "Digest": 1.1423435570016581e+77,
        "Hash": "Ae2tdPwUPEZJ8CiSFVipoupUVBGRAVbmbpmKPCXsExcwzZd6FcNpAcExY1r",
        "Type": 0,
      },
      Object {
        "AddressId": 16,
        "Digest": 1.1025868598519032e-268,
        "Hash": "Ae2tdPwUPEZCeLRPNcreMQAAfJFs9ZzBeFK9pUXhMnL3ooQP9TajasVsYKK",
        "Type": 0,
      },
      Object {
        "AddressId": 17,
        "Digest": 6.802372910540179e+76,
        "Hash": "Ae2tdPwUPEZGvzYwTSUZhTxDviZSKqLZDYVkcT4rLqckFXvdTMv21CinTCd",
        "Type": 0,
      },
      Object {
        "AddressId": 18,
        "Digest": 1.0898173340677806e+293,
        "Hash": "Ae2tdPwUPEZKEsQJxXQvRJHLCWRGFQNWFgHhroEw9GGXV25wRBH8TAmwCRi",
        "Type": 0,
      },
      Object {
        "AddressId": 19,
        "Digest": -1.4835020475302562e+52,
        "Hash": "Ae2tdPwUPEZ6u2i2u4iLhd9Rq4rUBsVaMpqQWuTCXMitMmugcsr9iANjNEE",
        "Type": 0,
      },
      Object {
        "AddressId": 20,
        "Digest": 1.0753995066668421e+154,
        "Hash": "Ae2tdPwUPEYxsngJhnW49jrmGuaCvQK34Hqrnx5w5SWxgfjDkSDcnrRdT5G",
        "Type": 0,
      },
      Object {
        "AddressId": 21,
        "Digest": 1.5842207841682243e-196,
        "Hash": "Ae2tdPwUPEZ3Kt2BJnDMQggxEA4c9MTagByH41rJkv2k82dBch2nqMAdyHJ",
        "Type": 0,
      },
      Object {
        "AddressId": 22,
        "Digest": 1.8819557589593857e+126,
        "Hash": "Ae2tdPwUPEYzRJEAdyX24mYTmKx8dMHYQgxkBcgnsdFHPPvmySMS9cspZmj",
        "Type": 0,
      },
      Object {
        "AddressId": 23,
        "Digest": -1.6768419216602427e+93,
        "Hash": "Ae2tdPwUPEZ5yxTy5wcVmUXP5xkkDSXfrgqWp8Px6knmUiFjJEytBGXfWoS",
        "Type": 0,
      },
      Object {
        "AddressId": 24,
        "Digest": -2.5950200694100975e-154,
        "Hash": "Ae2tdPwUPEZ3pKEVL1tMmz8EzaE9Hyn2cVJKf3TFVCjw7xeLFBdJngUXPXG",
        "Type": 0,
      },
      Object {
        "AddressId": 25,
        "Digest": -6.28195010657389e+125,
        "Hash": "Ae2tdPwUPEZLhFMGWjMpCWwsUiN58DkKmtg6r7dFJfXhmUyzNGPb2Crg141",
        "Type": 0,
      },
      Object {
        "AddressId": 26,
        "Digest": 1.8038527609850763e-30,
        "Hash": "Ae2tdPwUPEZBTYWkpudmAYdyQM9CHcV9orEVnVSan6EP2xNApB5bLE1XsKF",
        "Type": 0,
      },
      Object {
        "AddressId": 27,
        "Digest": -3.2738732077215015e+237,
        "Hash": "Ae2tdPwUPEYzdEoDVNdvLz6kFgVsjEyUJ1z3mHzAT1HotQk31tRvGNM4tge",
        "Type": 0,
      },
      Object {
        "AddressId": 28,
        "Digest": 6.009965811065196e+234,
        "Hash": "Ae2tdPwUPEZ2NvzdECB18z3SBTc8SVvx1PJuxPKsnncygEZeeKNaAeBeLDg",
        "Type": 0,
      },
      Object {
        "AddressId": 29,
        "Digest": -3.412056347004804e-256,
        "Hash": "Ae2tdPwUPEZ3iMfnFWSM3zeqpNwAdT62jNgiA27x1ZEacpfVbViYWb7gyNP",
        "Type": 0,
      },
      Object {
        "AddressId": 30,
        "Digest": -1.4607797017835113e-25,
        "Hash": "Ae2tdPwUPEYykz6FbkuRf9ScRwZc8F1xobMPyzECjsdMyqobn2tVpL6pdDW",
        "Type": 0,
      },
      Object {
        "AddressId": 31,
        "Digest": -1.5492234544082762e+72,
        "Hash": "Ae2tdPwUPEZ8SUET76NhRhJ6TNLW48csZ4e87hu6JYobQvVTKSYDMPBU5Xa",
        "Type": 0,
      },
      Object {
        "AddressId": 32,
        "Digest": 6.397199081168596e-249,
        "Hash": "Ae2tdPwUPEZBryPRKuib729PQNSBxzgXsTVwmg3CWQjZaAS7pj4WZNa3VR6",
        "Type": 0,
      },
      Object {
        "AddressId": 33,
        "Digest": 2.699654694740964e-163,
        "Hash": "Ae2tdPwUPEZ6yyMqXFEYmLvqXqktpU8LR6oW8qVbaap7R2YJGc9xDbs2Eb6",
        "Type": 0,
      },
      Object {
        "AddressId": 34,
        "Digest": 3.2672025499521527e-301,
        "Hash": "Ae2tdPwUPEZ4gRK6Qhj3Mo4tSU4LkRiqVgsQm6rg8YBGC6fqVLNqA9REr7c",
        "Type": 0,
      },
      Object {
        "AddressId": 35,
        "Digest": 5.473082144527723e-299,
        "Hash": "Ae2tdPwUPEZ3xWm3GHFVNtVWcnyTGpSF6AjyhZJY3DuSGvf3WvwLzkBisFw",
        "Type": 0,
      },
      Object {
        "AddressId": 36,
        "Digest": -9.504830601258996e-107,
        "Hash": "Ae2tdPwUPEZL9BqYXyY6zQQoatsWbkcN6g46NfvCfaE8mQppcVgentdAXeo",
        "Type": 0,
      },
      Object {
        "AddressId": 37,
        "Digest": -2.255481392460208e-13,
        "Hash": "Ae2tdPwUPEYzxRSsoqFY2Ym7zQfSdosY1bdK8KZTEjPjcobHd3GbZ3qZpvB",
        "Type": 0,
      },
      Object {
        "AddressId": 38,
        "Digest": -3.382255898780831e+65,
        "Hash": "Ae2tdPwUPEZEdntBfWRH5ucNrQd7RwPjZ2QZEkxJbsJDBrCGnTtjqfb8Aph",
        "Type": 0,
      },
      Object {
        "AddressId": 39,
        "Digest": 6.040400230567571e+220,
        "Hash": "Ae2tdPwUPEZKDMDuUZBUSokAzeJwNpqHorYEPuycXBMMFameoVFkxwpLheC",
        "Type": 0,
      },
      Object {
        "AddressId": 40,
        "Digest": -1.2798377351521785e-185,
        "Hash": "Ae2tdPwUPEZ2E4XNPVarvndsmkC8n2vS9rXJfCxny9oVacViLRDpeKioaAc",
        "Type": 0,
      },
      Object {
        "AddressId": 41,
        "Digest": -1.3416871383074957e-161,
        "Hash": "Ae2tdPwUPEYxD5EgazsN7DcLp2fFiak1RTco6CoDNioKVuodftS4oNeabwz",
        "Type": 0,
      },
      Object {
        "AddressId": 42,
        "Digest": 2.414293239739638e-47,
        "Hash": "Ae2tdPwUPEZFqcMbS757FyZrABDZUVtzEW4sPvzZj3UYBcn8BSWFBxmQK2n",
        "Type": 0,
      },
      Object {
        "AddressId": 43,
        "Digest": 1.1036862858872953e+216,
        "Hash": "Ae2tdPwUPEZGR3uPidVc5p1cSnV9KDzDxrrembeFhLYMgFAa4KHpTqmncFQ",
        "Type": 0,
      },
      Object {
        "AddressId": 44,
        "Digest": -2.938948476649332e-97,
        "Hash": "Ae2tdPwUPEZEvn7nMBBaBMCc773zeMCPsS93tDsFvyZw4quRbnq5bnP1i8F",
        "Type": 0,
      },
      Object {
        "AddressId": 45,
        "Digest": 8.159203653530658e-92,
        "Hash": "Ae2tdPwUPEZAzQ7FdZ8ksAjK7iVGzjMKUxWqkQLF52oGxWBNfyDRocqJwBT",
        "Type": 0,
      },
      Object {
        "AddressId": 46,
        "Digest": -1.2688708748746819e-61,
        "Hash": "Ae2tdPwUPEZ5PxKxoyZDgjsKgMWMpTRa4PH3sVgARSGBsWwNBH3qg7cMFsP",
        "Type": 0,
      },
      Object {
        "AddressId": 47,
        "Digest": 3.0263387081779602e-151,
        "Hash": "Ae2tdPwUPEZE9RAm3d3zuuh22YjqDxhR1JF6G93uJsRrk51QGHzRUzLvDjL",
        "Type": 0,
      },
      Object {
        "AddressId": 48,
        "Digest": 3.0263387081779602e-151,
        "Hash": "Ae2tdPwUPEZE9RAm3d3zuuh22YjqDxhR1JF6G93uJsRrk51QGHzRUzLvDjL",
        "Type": 0,
      },
    ],
  },
  Object {
    "Block": Array [
      Object {
        "BlockId": 1,
        "BlockTime": 2019-09-13T16:37:16.000Z,
        "Digest": -6.352946211521613e-51,
        "Hash": "a9835cc1e0f9b6c239aec4c446a6e181b7db6a80ad53cc0b04f70c6b85e9ba25",
        "Height": 218608,
        "SlotNum": 219650,
      },
      Object {
        "BlockId": 2,
        "BlockTime": 2019-09-13T16:37:36.000Z,
        "Digest": -9.690691258114666e-56,
        "Hash": "a9835cc1e0f9b6c239aec4c446a6e181b7db6a80ad53cc0b04f70c6b85e9ba26",
        "Height": 218609,
        "SlotNum": 219651,
      },
    ],
  },
  Object {
    "LastSyncInfo": Array [
      Object {
        "BlockHash": null,
        "Height": 0,
        "LastSyncInfoId": 1,
        "SlotNum": null,
        "Time": 1970-01-01T00:00:00.004Z,
      },
    ],
  },
  Object {
    "Transaction": Array [
      Object {
        "BlockId": 2,
        "Digest": 8.191593645542673e-27,
        "ErrorMessage": null,
        "Hash": "29f2fe214ec2c9b05773a689eca797e903adeaaf51dfe20782a4bf401e7ed545",
        "LastUpdateTime": 1568392656000,
        "Ordinal": 0,
        "Status": -2,
        "TransactionId": 1,
      },
      Object {
        "BlockId": 1,
        "Digest": 1.249559827714551e-31,
        "ErrorMessage": null,
        "Hash": "29f2fe214ec2c9b05773a689eca797e903adeaaf51dfe20782a4bf401e7ed546",
        "LastUpdateTime": 1568392636000,
        "Ordinal": 0,
        "Status": -2,
        "TransactionId": 2,
      },
      Object {
        "BlockId": null,
        "Digest": 1.9060984568373646e-36,
        "ErrorMessage": null,
        "Hash": "29f2fe214ec2c9b05773a689eca797e903adeaaf51dfe20782a4bf401e7ed547",
        "LastUpdateTime": 1568392676000,
        "Ordinal": null,
        "Status": -2,
        "TransactionId": 3,
      },
    ],
  },
  Object {
    "UtxoTransactionInput": Array [
      Object {
        "AddressId": 46,
        "Amount": "4000000",
        "IndexInOwnTx": 0,
        "IndexInParentTx": 0,
        "ParentTxHash": "9c8d3c4fe576f8c99d8ad6ba5d889f5a9f2d7fe07dc17b3f425f5d17696f3d20",
        "TransactionId": 1,
        "UtxoTransactionInputId": 1,
      },
      Object {
        "AddressId": 46,
        "Amount": "4000000",
        "IndexInOwnTx": 0,
        "IndexInParentTx": 0,
        "ParentTxHash": "9c8d3c4fe576f8c99d8ad6ba5d889f5a9f2d7fe07dc17b3f425f5d17696f3d21",
        "TransactionId": 2,
        "UtxoTransactionInputId": 2,
      },
      Object {
        "AddressId": 5,
        "Amount": "2100000",
        "IndexInOwnTx": 0,
        "IndexInParentTx": 0,
        "ParentTxHash": "29f2fe214ec2c9b05773a689eca797e903adeaaf51dfe20782a4bf401e7ed546",
        "TransactionId": 3,
        "UtxoTransactionInputId": 3,
      },
    ],
  },
  Object {
    "UtxoTransactionOutput": Array [
      Object {
        "AddressId": 5,
        "Amount": "2100000",
        "IsUnspent": true,
        "OutputIndex": 0,
        "TransactionId": 1,
        "UtxoTransactionOutputId": 1,
      },
      Object {
        "AddressId": 47,
        "Amount": "1731391",
        "IsUnspent": true,
        "OutputIndex": 1,
        "TransactionId": 1,
        "UtxoTransactionOutputId": 2,
      },
      Object {
        "AddressId": 5,
        "Amount": "2100000",
        "IsUnspent": true,
        "OutputIndex": 0,
        "TransactionId": 2,
        "UtxoTransactionOutputId": 3,
      },
      Object {
        "AddressId": 47,
        "Amount": "1731391",
        "IsUnspent": true,
        "OutputIndex": 1,
        "TransactionId": 2,
        "UtxoTransactionOutputId": 4,
      },
      Object {
        "AddressId": 48,
        "Amount": "1900000",
        "IsUnspent": true,
        "OutputIndex": 0,
        "TransactionId": 3,
        "UtxoTransactionOutputId": 5,
      },
    ],
  },
]
`;

exports[`Syncing with pending cip1852 1`] = `
Object {
  "addressLookupMap": Map {
    9 => "0365267961fefd53aefe4cf741dc0df9902d360bca0de4c0abe88ca89d0d08dd3d",
    92 => "030efc40f8fb587734cbcdeeb62a99da3f123677ea1754338665f9a294fbc904fe",
    93 => "03b4c4b9e8e0ee0c71b67952f54a235495a450fd8e45e6be2ee2263f0b34009f85",
    94 => "03b4c4b9e8e0ee0c71b67952f54a235495a450fd8e45e6be2ee2263f0b34009f85",
  },
  "txs": Array [
    Object {
      "accountingInputs": Array [],
      "accountingOutputs": Array [],
      "amount": "-1900000",
      "block": null,
      "fee": "-200000",
      "transaction": Object {
        "BlockId": null,
        "Digest": 1.9060984568373646e-36,
        "ErrorMessage": null,
        "Hash": "29f2fe214ec2c9b05773a689eca797e903adeaaf51dfe20782a4bf401e7ed547",
        "LastUpdateTime": 1568392676000,
        "Ordinal": null,
        "Status": -2,
        "TransactionId": 3,
      },
      "type": "expend",
      "utxoInputs": Array [
        Object {
          "AddressId": 9,
          "Amount": "2100000",
          "IndexInOwnTx": 0,
          "IndexInParentTx": 0,
          "ParentTxHash": "29f2fe214ec2c9b05773a689eca797e903adeaaf51dfe20782a4bf401e7ed546",
          "TransactionId": 3,
          "UtxoTransactionInputId": 3,
        },
      ],
      "utxoOutputs": Array [
        Object {
          "AddressId": 94,
          "Amount": "1900000",
          "IsUnspent": true,
          "OutputIndex": 0,
          "TransactionId": 3,
          "UtxoTransactionOutputId": 5,
        },
      ],
    },
    Object {
      "accountingInputs": Array [],
      "accountingOutputs": Array [],
      "amount": "2100000",
      "block": Object {
        "BlockId": 2,
        "BlockTime": 2019-09-13T16:37:36.000Z,
        "Digest": -9.690691258114666e-56,
        "Hash": "a9835cc1e0f9b6c239aec4c446a6e181b7db6a80ad53cc0b04f70c6b85e9ba26",
        "Height": 218609,
        "SlotNum": 219651,
      },
      "fee": "0",
      "transaction": Object {
        "BlockId": 2,
        "Digest": 8.191593645542673e-27,
        "ErrorMessage": null,
        "Hash": "29f2fe214ec2c9b05773a689eca797e903adeaaf51dfe20782a4bf401e7ed545",
        "LastUpdateTime": 1568392656000,
        "Ordinal": 0,
        "Status": -2,
        "TransactionId": 1,
      },
      "type": "income",
      "utxoInputs": Array [
        Object {
          "AddressId": 92,
          "Amount": "4000000",
          "IndexInOwnTx": 0,
          "IndexInParentTx": 0,
          "ParentTxHash": "9c8d3c4fe576f8c99d8ad6ba5d889f5a9f2d7fe07dc17b3f425f5d17696f3d20",
          "TransactionId": 1,
          "UtxoTransactionInputId": 1,
        },
      ],
      "utxoOutputs": Array [
        Object {
          "AddressId": 9,
          "Amount": "2100000",
          "IsUnspent": true,
          "OutputIndex": 0,
          "TransactionId": 1,
          "UtxoTransactionOutputId": 1,
        },
        Object {
          "AddressId": 93,
          "Amount": "1731391",
          "IsUnspent": true,
          "OutputIndex": 1,
          "TransactionId": 1,
          "UtxoTransactionOutputId": 2,
        },
      ],
    },
    Object {
      "accountingInputs": Array [],
      "accountingOutputs": Array [],
      "amount": "2100000",
      "block": Object {
        "BlockId": 1,
        "BlockTime": 2019-09-13T16:37:16.000Z,
        "Digest": -6.352946211521613e-51,
        "Hash": "a9835cc1e0f9b6c239aec4c446a6e181b7db6a80ad53cc0b04f70c6b85e9ba25",
        "Height": 218608,
        "SlotNum": 219650,
      },
      "fee": "0",
      "transaction": Object {
        "BlockId": 1,
        "Digest": 1.249559827714551e-31,
        "ErrorMessage": null,
        "Hash": "29f2fe214ec2c9b05773a689eca797e903adeaaf51dfe20782a4bf401e7ed546",
        "LastUpdateTime": 1568392636000,
        "Ordinal": 0,
        "Status": -2,
        "TransactionId": 2,
      },
      "type": "income",
      "utxoInputs": Array [
        Object {
          "AddressId": 92,
          "Amount": "4000000",
          "IndexInOwnTx": 0,
          "IndexInParentTx": 0,
          "ParentTxHash": "9c8d3c4fe576f8c99d8ad6ba5d889f5a9f2d7fe07dc17b3f425f5d17696f3d21",
          "TransactionId": 2,
          "UtxoTransactionInputId": 2,
        },
      ],
      "utxoOutputs": Array [
        Object {
          "AddressId": 9,
          "Amount": "2100000",
          "IsUnspent": true,
          "OutputIndex": 0,
          "TransactionId": 2,
          "UtxoTransactionOutputId": 3,
        },
        Object {
          "AddressId": 93,
          "Amount": "1731391",
          "IsUnspent": true,
          "OutputIndex": 1,
          "TransactionId": 2,
          "UtxoTransactionOutputId": 4,
        },
      ],
    },
  ],
}
`;

exports[`Syncing with pending cip1852 2`] = `
Array [
  Object {
    "Address": Array [
      Object {
        "AddressId": 1,
        "Digest": 1.922922635850615e+73,
        "Hash": "0352c71486899f2363d2cb632caf375024fbef4f44c06915168f50659430ef0e42",
        "Type": 1,
      },
      Object {
        "AddressId": 2,
        "Digest": -8.973804533115101e-139,
        "Hash": "0452c71486899f2363d2cb632caf375024fbef4f44c06915168f50659430ef0e425247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 3,
        "Digest": 1.0883133173279063e-79,
        "Hash": "03d986f34f3dfe72815ec0eda0772e178b065e665cc82104c7cc3e5dac31829f30",
        "Type": 1,
      },
      Object {
        "AddressId": 4,
        "Digest": 3.894757034205239e-214,
        "Hash": "04d986f34f3dfe72815ec0eda0772e178b065e665cc82104c7cc3e5dac31829f305247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 5,
        "Digest": 3.0308179804035946e-292,
        "Hash": "03ec6e856eeffd4fa9ec0fa7e9edc786e63261530676fcb0215bf95ad4a11f6130",
        "Type": 1,
      },
      Object {
        "AddressId": 6,
        "Digest": 1.5172123864507825e-98,
        "Hash": "04ec6e856eeffd4fa9ec0fa7e9edc786e63261530676fcb0215bf95ad4a11f61305247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 7,
        "Digest": -7.670208771995583e-16,
        "Hash": "03353e1d2014267dab1eab991e6feed8b4fa403fb8527f9427483ab00e8e60876b",
        "Type": 1,
      },
      Object {
        "AddressId": 8,
        "Digest": 1.3955104998854326e-87,
        "Hash": "04353e1d2014267dab1eab991e6feed8b4fa403fb8527f9427483ab00e8e60876b5247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 9,
        "Digest": -6.983535077310985e-273,
        "Hash": "0365267961fefd53aefe4cf741dc0df9902d360bca0de4c0abe88ca89d0d08dd3d",
        "Type": 1,
      },
      Object {
        "AddressId": 10,
        "Digest": 2.0937025834614076e-166,
        "Hash": "0465267961fefd53aefe4cf741dc0df9902d360bca0de4c0abe88ca89d0d08dd3d5247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 11,
        "Digest": -3.4154394917068124e-262,
        "Hash": "03dc749dd61975bcc821ede55c8c723323f6be77c19c6a83e32416a320a5ea28d8",
        "Type": 1,
      },
      Object {
        "AddressId": 12,
        "Digest": 2.1341610929379014e+291,
        "Hash": "04dc749dd61975bcc821ede55c8c723323f6be77c19c6a83e32416a320a5ea28d85247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 13,
        "Digest": -3.260831817002079e+86,
        "Hash": "03c85a92119ec9be94aa91d08acb04b6bdcbcc3c97718aca0ffbe5fdad6907980e",
        "Type": 1,
      },
      Object {
        "AddressId": 14,
        "Digest": -2.0773825810144208e-233,
        "Hash": "04c85a92119ec9be94aa91d08acb04b6bdcbcc3c97718aca0ffbe5fdad6907980e5247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 15,
        "Digest": 2.6110256949291756e-156,
        "Hash": "03904b12c5cd669178cae04c2f601acd3468e1a826ae3248f8defb23d75681317c",
        "Type": 1,
      },
      Object {
        "AddressId": 16,
        "Digest": 7.879859283786793e-198,
        "Hash": "04904b12c5cd669178cae04c2f601acd3468e1a826ae3248f8defb23d75681317c5247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 17,
        "Digest": 2.5160473703032145e+277,
        "Hash": "03a03a99e0894849074e8f689fdf5e99276a56f6c9f7dab5efd50ddeb78e9a38fb",
        "Type": 1,
      },
      Object {
        "AddressId": 18,
        "Digest": 2.7688009473793197e-45,
        "Hash": "04a03a99e0894849074e8f689fdf5e99276a56f6c9f7dab5efd50ddeb78e9a38fb5247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 19,
        "Digest": -15694896.13034338,
        "Hash": "03b6d58964c5542a5f7c5cfd1a4974e9c29bb5eb6616a13f1282119539e9e0ebc3",
        "Type": 1,
      },
      Object {
        "AddressId": 20,
        "Digest": 8.327636036414499e-228,
        "Hash": "04b6d58964c5542a5f7c5cfd1a4974e9c29bb5eb6616a13f1282119539e9e0ebc35247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 21,
        "Digest": -1.830605464076875e-116,
        "Hash": "03cf41217c4ff64ad3fa35bc1c3e78019a28a6bb3d6fa532ac6fd08a249be7ee21",
        "Type": 1,
      },
      Object {
        "AddressId": 22,
        "Digest": 4.342581771240852e+139,
        "Hash": "04cf41217c4ff64ad3fa35bc1c3e78019a28a6bb3d6fa532ac6fd08a249be7ee215247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 23,
        "Digest": -5.005604641213275e-140,
        "Hash": "03ef4d0d86cdc1d0080f3a2bd06f281a1835298daa8e413716e4e12a4886474d36",
        "Type": 1,
      },
      Object {
        "AddressId": 24,
        "Digest": 3.522045464001792e-167,
        "Hash": "04ef4d0d86cdc1d0080f3a2bd06f281a1835298daa8e413716e4e12a4886474d365247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 25,
        "Digest": -9.660229661320306e+303,
        "Hash": "03e72322fcbfab91c9c73409dd0927ff0ec131804a1297561983604a3b1544b74a",
        "Type": 1,
      },
      Object {
        "AddressId": 26,
        "Digest": -1.4950943512380345e-270,
        "Hash": "04e72322fcbfab91c9c73409dd0927ff0ec131804a1297561983604a3b1544b74a5247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 27,
        "Digest": -6.56501252867694e+220,
        "Hash": "0362de4001174dca7a9cf5679ac30ccf94a2d139dfa507fd310ad6fbc315072bcf",
        "Type": 1,
      },
      Object {
        "AddressId": 28,
        "Digest": -6.059591666328581e-235,
        "Hash": "0462de4001174dca7a9cf5679ac30ccf94a2d139dfa507fd310ad6fbc315072bcf5247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 29,
        "Digest": 1.8441503078755835e-12,
        "Hash": "03db47ba226eafc2e2357cbc5699b563b7149521a6bf2bb4e5bf3f1bc543079fab",
        "Type": 1,
      },
      Object {
        "AddressId": 30,
        "Digest": 993985865885332900000,
        "Hash": "04db47ba226eafc2e2357cbc5699b563b7149521a6bf2bb4e5bf3f1bc543079fab5247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 31,
        "Digest": -3.1404564843373737e+251,
        "Hash": "0382c63ff3a2db1e1330178dd894d9a339773943cf452fc8382d0018f19d01ebcf",
        "Type": 1,
      },
      Object {
        "AddressId": 32,
        "Digest": 2.578677539652743e+124,
        "Hash": "0482c63ff3a2db1e1330178dd894d9a339773943cf452fc8382d0018f19d01ebcf5247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 33,
        "Digest": 1.0294115761657875e+196,
        "Hash": "03f36159a7870b4aef4e2562bc23bdae3b56409303855fee452275c8cb5b0d925d",
        "Type": 1,
      },
      Object {
        "AddressId": 34,
        "Digest": 4.380501561208488e+302,
        "Hash": "04f36159a7870b4aef4e2562bc23bdae3b56409303855fee452275c8cb5b0d925d5247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 35,
        "Digest": -3.7952662148300146e-265,
        "Hash": "0319d35bcf29955f755682c336d780efd0be4c2a8d1aeb013d8fe9920006ad8621",
        "Type": 1,
      },
      Object {
        "AddressId": 36,
        "Digest": 4.1235520065013795e+28,
        "Hash": "0419d35bcf29955f755682c336d780efd0be4c2a8d1aeb013d8fe9920006ad86215247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 37,
        "Digest": -1.133695130948707e+60,
        "Hash": "03aacb11418cd56d8e9be3a25cb0d1308800f112fe635d192a4db4d3b3b6b41e3a",
        "Type": 1,
      },
      Object {
        "AddressId": 38,
        "Digest": 8.681037145507579e+230,
        "Hash": "04aacb11418cd56d8e9be3a25cb0d1308800f112fe635d192a4db4d3b3b6b41e3a5247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 39,
        "Digest": 1.2678098721815103e+36,
        "Hash": "038e2840fed90d2138761d8a14a4cbed08ed00cf908b07f94ec5fa9db6f4d7e74f",
        "Type": 1,
      },
      Object {
        "AddressId": 40,
        "Digest": -1.1668537467860038e-147,
        "Hash": "048e2840fed90d2138761d8a14a4cbed08ed00cf908b07f94ec5fa9db6f4d7e74f5247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 41,
        "Digest": -3.5217891672997486e+307,
        "Hash": "03c7cb0e3cd882555eeb8ddc58947eb40cba96c671ccf6806e377287ca087ad1e9",
        "Type": 1,
      },
      Object {
        "AddressId": 42,
        "Digest": -1.276107101639704e-75,
        "Hash": "04c7cb0e3cd882555eeb8ddc58947eb40cba96c671ccf6806e377287ca087ad1e95247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 43,
        "Digest": -1.070825587517362e-17,
        "Hash": "0352d1c87ebad693e50841f608c85d651928f7a77fe88145c9b93a843446104072",
        "Type": 1,
      },
      Object {
        "AddressId": 44,
        "Digest": -6.249225645367354e+175,
        "Hash": "0452d1c87ebad693e50841f608c85d651928f7a77fe88145c9b93a8434461040725247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 45,
        "Digest": -4.155339257689695e-64,
        "Hash": "03e32694490558a7bb371c47f6a39c11fc924d61c2212ee08511d376e21dbc250e",
        "Type": 1,
      },
      Object {
        "AddressId": 46,
        "Digest": 5.226534593211332e+116,
        "Hash": "04e32694490558a7bb371c47f6a39c11fc924d61c2212ee08511d376e21dbc250e5247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 47,
        "Digest": 5.766462874874761e-63,
        "Hash": "035413ddc555eb58ccc0f543e7b331c5f22bf7a1e377e5a1829141faa6f6ad44dd",
        "Type": 1,
      },
      Object {
        "AddressId": 48,
        "Digest": 6.168620814132152e-278,
        "Hash": "045413ddc555eb58ccc0f543e7b331c5f22bf7a1e377e5a1829141faa6f6ad44dd5247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 49,
        "Digest": -8.52574129724981e-112,
        "Hash": "03dcd05c5ce770f9d27709978e8462f2f709d416473e174eeb016b2e78ce570589",
        "Type": 1,
      },
      Object {
        "AddressId": 50,
        "Digest": -5.790660025889179e+143,
        "Hash": "04dcd05c5ce770f9d27709978e8462f2f709d416473e174eeb016b2e78ce5705895247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 51,
        "Digest": -6.164495396334147e+60,
        "Hash": "03cfdc28d7b0670b2422312b7f4ef286bc759dc4940cdccab29fe981bd91903aa4",
        "Type": 1,
      },
      Object {
        "AddressId": 52,
        "Digest": -1.3461679552430524e-43,
        "Hash": "04cfdc28d7b0670b2422312b7f4ef286bc759dc4940cdccab29fe981bd91903aa45247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 53,
        "Digest": -8.214771215725454e-9,
        "Hash": "0390511d90c8e7b1b867ce362b8aa533db1794b4efa9b0250a631b9fa314aec6cf",
        "Type": 1,
      },
      Object {
        "AddressId": 54,
        "Digest": 2.845230900133933e-139,
        "Hash": "0490511d90c8e7b1b867ce362b8aa533db1794b4efa9b0250a631b9fa314aec6cf5247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 55,
        "Digest": 2.1793558794405924e-290,
        "Hash": "03ac0ddbdf7fdcd82900b218ac341b49b26ec8ff3bb46c7d5a72a5dcb7437304e0",
        "Type": 1,
      },
      Object {
        "AddressId": 56,
        "Digest": -6.398283114588265e-293,
        "Hash": "04ac0ddbdf7fdcd82900b218ac341b49b26ec8ff3bb46c7d5a72a5dcb7437304e05247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 57,
        "Digest": 2.2035557457558316e+291,
        "Hash": "033632d8aa23fc0fc0de7193ca1012406e3ecc0b7aa4ec623bd71befd5d6c6ef97",
        "Type": 1,
      },
      Object {
        "AddressId": 58,
        "Digest": -5.492027213830002e-113,
        "Hash": "043632d8aa23fc0fc0de7193ca1012406e3ecc0b7aa4ec623bd71befd5d6c6ef975247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 59,
        "Digest": 2.0754609298659098e-116,
        "Hash": "0336f6d9b7ba83aca4081fcfba941af2727f580d2a3035684095a3e7adb1c8508a",
        "Type": 1,
      },
      Object {
        "AddressId": 60,
        "Digest": 4.289960407868709e+69,
        "Hash": "0436f6d9b7ba83aca4081fcfba941af2727f580d2a3035684095a3e7adb1c8508a5247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 61,
        "Digest": 2.4714136713811983e-142,
        "Hash": "03739e6d75e648099a73daa44a373ac2e0a8f2a8f0a127f634065c5b383164674c",
        "Type": 1,
      },
      Object {
        "AddressId": 62,
        "Digest": -1.6429409049031442e+217,
        "Hash": "04739e6d75e648099a73daa44a373ac2e0a8f2a8f0a127f634065c5b383164674c5247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 63,
        "Digest": 1.972754860672515e+52,
        "Hash": "03789536842e6c45d676bb10fa6466d809455df0ca86db97c7dd91a96eb21faf32",
        "Type": 1,
      },
      Object {
        "AddressId": 64,
        "Digest": 2.9586942333679952e+141,
        "Hash": "04789536842e6c45d676bb10fa6466d809455df0ca86db97c7dd91a96eb21faf325247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 65,
        "Digest": -1.429533798906611e-61,
        "Hash": "0324bf79606e7932e936e2dc18d7cf2e1d213e10a48d125ec005ce2800ba87828e",
        "Type": 1,
      },
      Object {
        "AddressId": 66,
        "Digest": 2.2364075324220344e+58,
        "Hash": "0424bf79606e7932e936e2dc18d7cf2e1d213e10a48d125ec005ce2800ba87828e5247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 67,
        "Digest": 1.1412918332680562e-147,
        "Hash": "035f491e964a08005f0f9790273ad23351735a3214a5660c43414553fbb4f2422b",
        "Type": 1,
      },
      Object {
        "AddressId": 68,
        "Digest": 1.023787994285192e-262,
        "Hash": "045f491e964a08005f0f9790273ad23351735a3214a5660c43414553fbb4f2422b5247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 69,
        "Digest": 5.608282908766105e+281,
        "Hash": "03896c84e4aa0522a289d83cca24c65772683b7c0b2ef2c300cc3f26b4619ac1a1",
        "Type": 1,
      },
      Object {
        "AddressId": 70,
        "Digest": 8.456267375156029e+214,
        "Hash": "04896c84e4aa0522a289d83cca24c65772683b7c0b2ef2c300cc3f26b4619ac1a15247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 71,
        "Digest": -5.2476841852531136e-73,
        "Hash": "03c8fb0cf805ea8654f9410d7c14c6b92afbdaa13166b6e264eb5fd43dabe1601f",
        "Type": 1,
      },
      Object {
        "AddressId": 72,
        "Digest": 811512290302852700,
        "Hash": "04c8fb0cf805ea8654f9410d7c14c6b92afbdaa13166b6e264eb5fd43dabe1601f5247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 73,
        "Digest": -2.872422206576991e+248,
        "Hash": "03f88866ee1c0ba99866f2f04acbdccab63b5b90a39c15de9d05852883a5d46f6a",
        "Type": 1,
      },
      Object {
        "AddressId": 74,
        "Digest": -1.0531279508968161e-52,
        "Hash": "04f88866ee1c0ba99866f2f04acbdccab63b5b90a39c15de9d05852883a5d46f6a5247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 75,
        "Digest": 2.819334940847802e+85,
        "Hash": "037871a04e08108cc88453241ae5d1b9133bdfe1079188c2cf24bd27e065ce7b36",
        "Type": 1,
      },
      Object {
        "AddressId": 76,
        "Digest": -6.585277644912857e+152,
        "Hash": "047871a04e08108cc88453241ae5d1b9133bdfe1079188c2cf24bd27e065ce7b365247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 77,
        "Digest": -8.427052312213728e+300,
        "Hash": "039793ed04524a4dbb5cc49d7192744dd01f103fd725964972060ca34c2bc72808",
        "Type": 1,
      },
      Object {
        "AddressId": 78,
        "Digest": -7.430238058498852e+88,
        "Hash": "049793ed04524a4dbb5cc49d7192744dd01f103fd725964972060ca34c2bc728085247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 79,
        "Digest": -3.240678562287037e+230,
        "Hash": "0326a4e2f795d2ca4600fad14fc8f109c7b900c5d552d7e1f75cc7601f16ca5ccb",
        "Type": 1,
      },
      Object {
        "AddressId": 80,
        "Digest": -3.7681976654108256e-283,
        "Hash": "0426a4e2f795d2ca4600fad14fc8f109c7b900c5d552d7e1f75cc7601f16ca5ccb5247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 81,
        "Digest": -3.369579143058011e-295,
        "Hash": "055247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 3,
      },
      Object {
        "AddressId": 82,
        "Digest": 4.2651914971852276e+78,
        "Hash": "037ffec36b45386bd6fe18dee3b4d7f064ff1034c84b13fb4e99aaa48d31821053",
        "Type": 1,
      },
      Object {
        "AddressId": 83,
        "Digest": 2.1413180872296113e-207,
        "Hash": "047ffec36b45386bd6fe18dee3b4d7f064ff1034c84b13fb4e99aaa48d318210535247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 84,
        "Digest": -1.2126180396067397e+287,
        "Hash": "03121f56bf549fc3c463729a966c716f55eb7a93ed40ae1c8b56896d5758415ef1",
        "Type": 1,
      },
      Object {
        "AddressId": 85,
        "Digest": 1.326664329951578e-300,
        "Hash": "04121f56bf549fc3c463729a966c716f55eb7a93ed40ae1c8b56896d5758415ef15247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 86,
        "Digest": -2.358051133671872e-274,
        "Hash": "038d9a4b1f2d546f57d4153fe8312e70b6af8189161590464b83d1bb303e149380",
        "Type": 1,
      },
      Object {
        "AddressId": 87,
        "Digest": 1.4479423370180254e-249,
        "Hash": "048d9a4b1f2d546f57d4153fe8312e70b6af8189161590464b83d1bb303e1493805247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 88,
        "Digest": -1.0802379569166083e-285,
        "Hash": "0392568cab2a8c062e27a05abacf5352fec7efe5b6639b54ca123634b014410ae9",
        "Type": 1,
      },
      Object {
        "AddressId": 89,
        "Digest": -5.553275526085591e-296,
        "Hash": "0492568cab2a8c062e27a05abacf5352fec7efe5b6639b54ca123634b014410ae95247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 90,
        "Digest": 1.0440318629600951e-244,
        "Hash": "03bf2c23a99181059e7b9bd372b0eb827a4ef5cf37a1a54ce7e2c4d7c014c70459",
        "Type": 1,
      },
      Object {
        "AddressId": 91,
        "Digest": -1.1377569017604921e-61,
        "Hash": "04bf2c23a99181059e7b9bd372b0eb827a4ef5cf37a1a54ce7e2c4d7c014c704595247fec3590a3614b3ac1a92efd92c5ca1cc3a64d2748c3fe44b7a66e9ea7059",
        "Type": 2,
      },
      Object {
        "AddressId": 92,
        "Digest": 1.8319278958118063e+140,
        "Hash": "030efc40f8fb587734cbcdeeb62a99da3f123677ea1754338665f9a294fbc904fe",
        "Type": 1,
      },
      Object {
        "AddressId": 93,
        "Digest": 9.246378790476663e-275,
        "Hash": "03b4c4b9e8e0ee0c71b67952f54a235495a450fd8e45e6be2ee2263f0b34009f85",
        "Type": 1,
      },
      Object {
        "AddressId": 94,
        "Digest": 9.246378790476663e-275,
        "Hash": "03b4c4b9e8e0ee0c71b67952f54a235495a450fd8e45e6be2ee2263f0b34009f85",
        "Type": 1,
      },
    ],
  },
  Object {
    "Block": Array [
      Object {
        "BlockId": 1,
        "BlockTime": 2019-09-13T16:37:16.000Z,
        "Digest": -6.352946211521613e-51,
        "Hash": "a9835cc1e0f9b6c239aec4c446a6e181b7db6a80ad53cc0b04f70c6b85e9ba25",
        "Height": 218608,
        "SlotNum": 219650,
      },
      Object {
        "BlockId": 2,
        "BlockTime": 2019-09-13T16:37:36.000Z,
        "Digest": -9.690691258114666e-56,
        "Hash": "a9835cc1e0f9b6c239aec4c446a6e181b7db6a80ad53cc0b04f70c6b85e9ba26",
        "Height": 218609,
        "SlotNum": 219651,
      },
    ],
  },
  Object {
    "LastSyncInfo": Array [
      Object {
        "BlockHash": null,
        "Height": 0,
        "LastSyncInfoId": 1,
        "SlotNum": null,
        "Time": 1970-01-01T00:00:00.004Z,
      },
    ],
  },
  Object {
    "Transaction": Array [
      Object {
        "BlockId": 2,
        "Digest": 8.191593645542673e-27,
        "ErrorMessage": null,
        "Hash": "29f2fe214ec2c9b05773a689eca797e903adeaaf51dfe20782a4bf401e7ed545",
        "LastUpdateTime": 1568392656000,
        "Ordinal": 0,
        "Status": -2,
        "TransactionId": 1,
      },
      Object {
        "BlockId": 1,
        "Digest": 1.249559827714551e-31,
        "ErrorMessage": null,
        "Hash": "29f2fe214ec2c9b05773a689eca797e903adeaaf51dfe20782a4bf401e7ed546",
        "LastUpdateTime": 1568392636000,
        "Ordinal": 0,
        "Status": -2,
        "TransactionId": 2,
      },
      Object {
        "BlockId": null,
        "Digest": 1.9060984568373646e-36,
        "ErrorMessage": null,
        "Hash": "29f2fe214ec2c9b05773a689eca797e903adeaaf51dfe20782a4bf401e7ed547",
        "LastUpdateTime": 1568392676000,
        "Ordinal": null,
        "Status": -2,
        "TransactionId": 3,
      },
    ],
  },
  Object {
    "UtxoTransactionInput": Array [
      Object {
        "AddressId": 92,
        "Amount": "4000000",
        "IndexInOwnTx": 0,
        "IndexInParentTx": 0,
        "ParentTxHash": "9c8d3c4fe576f8c99d8ad6ba5d889f5a9f2d7fe07dc17b3f425f5d17696f3d20",
        "TransactionId": 1,
        "UtxoTransactionInputId": 1,
      },
      Object {
        "AddressId": 92,
        "Amount": "4000000",
        "IndexInOwnTx": 0,
        "IndexInParentTx": 0,
        "ParentTxHash": "9c8d3c4fe576f8c99d8ad6ba5d889f5a9f2d7fe07dc17b3f425f5d17696f3d21",
        "TransactionId": 2,
        "UtxoTransactionInputId": 2,
      },
      Object {
        "AddressId": 9,
        "Amount": "2100000",
        "IndexInOwnTx": 0,
        "IndexInParentTx": 0,
        "ParentTxHash": "29f2fe214ec2c9b05773a689eca797e903adeaaf51dfe20782a4bf401e7ed546",
        "TransactionId": 3,
        "UtxoTransactionInputId": 3,
      },
    ],
  },
  Object {
    "UtxoTransactionOutput": Array [
      Object {
        "AddressId": 9,
        "Amount": "2100000",
        "IsUnspent": true,
        "OutputIndex": 0,
        "TransactionId": 1,
        "UtxoTransactionOutputId": 1,
      },
      Object {
        "AddressId": 93,
        "Amount": "1731391",
        "IsUnspent": true,
        "OutputIndex": 1,
        "TransactionId": 1,
        "UtxoTransactionOutputId": 2,
      },
      Object {
        "AddressId": 9,
        "Amount": "2100000",
        "IsUnspent": true,
        "OutputIndex": 0,
        "TransactionId": 2,
        "UtxoTransactionOutputId": 3,
      },
      Object {
        "AddressId": 93,
        "Amount": "1731391",
        "IsUnspent": true,
        "OutputIndex": 1,
        "TransactionId": 2,
        "UtxoTransactionOutputId": 4,
      },
      Object {
        "AddressId": 94,
        "Amount": "1900000",
        "IsUnspent": true,
        "OutputIndex": 0,
        "TransactionId": 3,
        "UtxoTransactionOutputId": 5,
      },
    ],
  },
]
`;
